新增 代理模式

--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -81,8 +81,16 @@
 简单工厂模式的结构比较简单，其核心是工厂类的设计，它包含以下 3 个角色：
 
 - **Factory（工厂角色）**：简单工厂模式的核心，负责实现创建所有产品实例的内部逻辑，提供静态的工厂方法 factoryMethod()，它的返回类型为抽象产品类型 Product。
+
 - **Product（抽象产品角色）**：它是工厂类创建的所有对象的父类，封装了各种产品对象的共有方法
+
 - **ConcreteProduct（具体产品角色）**：它是简单工厂模式的创建目标，所有被创建的对象都充当这个角色的某个具体类的实例。它需要继承抽象产品角色，需要实现在抽象产品中声明的抽象方法。
+
+  
+
+  ![simple-factory](../assets/simple-factory.png)
+
+<center>简单工厂模式结构图</center>
 
 ##### 简单工厂模式的实现
 
@@ -222,9 +230,18 @@ public class ChartClient {
 工厂方法模式提供一个抽象工厂接口来声明抽象工厂方法，而由其子类来具体实现工厂方法，创建具体的产品对象。工厂方法模式包含以下 4 个角色：
 
 - **Product（抽象产品**）：它是定义产品的接口，是工厂方法模式所创建对象的超类型，也就是产品对象的公共父类。
+
 - **ConcreteProduct（具体产品）**：它实现了抽象产品接口，某种类型的具体产品由专门的具体工厂创建，具体工厂和具体产品之间一一对应。
+
 - **Factory（抽象工厂）**：在抽象工厂类中声明了工厂方法（Factory Method），用于返回一个产品。**抽象工厂是工厂方法模式的核心**，所有创建对象的工厂类都必须实现该接口。
+
 - **ConcreteFactory（具体工厂）**：它是抽象工厂类的子类，实现了在抽象工厂中声明的工厂方法，并可由客户端调用，返回一个具体产品类的实例。
+
+  
+
+  ![factory-method](../assets/factory-method.png)
+
+<center>工厂方法模式结构图</center>
 
 ##### 工厂方法模式实现
 
@@ -422,9 +439,18 @@ public class DatabaseLoggerFactory implements LoggerFactory {
 在抽象工厂模式中，每一个具体工厂都提供了多个工厂方法用于产生多种不同类型的产品，这些产品构成了一个产品族，抽象工厂模式包含以下 4 个角色：
 
 - **AbstractFactory（抽象工厂）**：它声明了一组用于创建一族产品的方法，每一个方法对应一种产品。
+
 - **ConcreteFactory（具体工厂）**：它实现了在抽象工厂中声明的创建产品的方法，生成一组具体产品，这些产品构成了一个产品族，每一个产品都位于某个产品等级结构。
+
 - **AbstractProduct（抽象产品）**：它为每种产品声明接口，在抽象产品中声明了产品所具有的业务方法。
+
 - **ConcreteProduct（具体产品）**：它定义了具体工厂生产的具体产品对象，实现抽象产品接口中声明的业务方法。
+
+  
+
+  <img src="../assets/abstract-factory.png" alt="abstract-factory" style="zoom:90%;" />
+
+<center>抽象工厂模式结构图</center>
 
 ##### 抽象工厂模式的实现
 
@@ -688,9 +714,18 @@ class AbstractFactoryXmlUtil {
 建造者模式包含如下 4 个角色：
 
 - **Builder（抽象构造者）**：它为创建一个产品对象的各个部件指定抽象接口，在该接口中一般声明两类方法，一类方法是 buildPartX() ，它们用于创建复杂对象的各个部件；另一类方法是 getResult() ，它们用于返回复杂对象。Builder 既可以是抽象类，也可以是接口。
+
 - **ConcreteBuilder（具体构造者）**：它实现了 Builder 接口，实现各个部件的具体构造和装配方法，定义并明确所创建的复杂对象，还可以提供一个方法返回创建好的复杂产品对象（该方法也可以由抽象构造者实现）。
+
 - **Product（产品）**：它是被构建的复杂对象，包含多个组成部件，具体构造者创建该产品的内部表示并定义它的装配过程。
+
 - **Director（指挥者）**：指挥者又称为导演类，它负责安排复杂对象的构造次序，指挥者与抽象构造者直接存在关联关系，可以在其 construct() 构造方法中调用构造者对象的部件构造与装配方法，完成复杂对象的构造。客户端一般只需要与指挥者进行交互，在客户端确定具体构造者的类型，并实例化具体构造者对象（也可以通过配置文件和反射机制实现），然后通过指挥者类的构造函数或者 Setter 方法将该对象传入指挥者类。
+
+  
+
+  ![builder](../assets/builder.png)
+
+<center>建造者模式结构图</center>
 
 ##### 建造者模式的实现
 
@@ -1310,8 +1345,22 @@ public class StaticInnerSingleton {
 适配器模式包含以下 3 个角色：
 
 - **Target（目标抽象类）**：目标抽象类定义客户所属的接口，可以是一个抽象类或接口，也可以是具体类。在类适配器中，由于 Java 不支持多重继承，它只能是接口。
+
 - **Adapter（适配器类）**：它可以调用另一个接口，作为一个转化器，对 Adaptee 和 Target 进行适配。适配器 Adapter 是适配器模式的核心，在类适配器中，它通过**实现 Target 接口并继承 Adaptee 类**来使两者产生联系；在对象适配器中，它通过**继承 Target 并关联一个 Adaptee 对**象使二者产生联系。
+
 - **Adaptee（适配者类）**：适配者即被适配的角色，它定义了一个已经存在的接口，这个接口需要适配，适配者类一般是具体类，包含了客户希望使用的业务方法，在某些情况下甚至没有适配者类的源代码。
+
+  
+
+  <img src="../assets/class-adapter.png" alt="class-adapter" style="zoom:60%;" />
+
+  <center>类适配器模式结构图</center>
+
+  
+
+  <img src="../assets/object-adapter.png" alt="object-adapter" style="zoom:60%;" />
+
+<center>对象适配器模式结构图</center>
 
 适配器模式可以将一个类的接口和另一个类的接口匹配起来，使用的前提是不能或不想修改适配者接口和抽象目标类接口。适配器模式更多的是强调对代码的组织，而不是功能的实现。
 
@@ -1512,9 +1561,18 @@ public class ConcreteServiceClass extends AbstractServiceClass {
 桥接模式包含以下 4 个角色：
 
 - **Abstraction（抽象类）**：通常是抽象类而不是接口，其定义了一个 Implementor（实现类接口）类型的对象并可以维护该对象，它与 Implementor 具有关联关系，它既可以包含抽象业务方法，也可以已包含具体业务方法。
+
 - **RefinedAbstraction（扩充抽象类）**：它扩充了由 Abstraction 定义的接口，通常情况下不再是抽象类而是具体类，实现了在 Abstraction  中声明的抽象业务方法，在 RefinedAbstraction 中可以调用在 Implementor 中定义的业务方法。
+
 - **Implementor（实现类接口）**：它是定义实现类的接口，这个接口不一定要与 Abstraction 的接口完全一致，事实上这两个接口可以完全不同。Implementor  接口仅提供基本操作，而 Abstraction 定义的接口可能会做更多更复杂的操作。Implementor  接口对这些基本操作进行了声明，而具体实现交给其子类。通过关联关系，在 Abstraction 中不仅拥有自己的方法，还可以调用到 Implementor  中定义的方法，使用关联关系来替代继承关系。
+
 - **ConcreteImplementor（具体实现类）**：它具体实现了 Implementor  接口，在不同的 ConcreteImplementor  中提供基本操作的不同实现，在程序运行时 ConcreteImplementor  对象将替代其父类对象，提供给抽象类具体的业务操作方法。
+
+  
+
+  ![bridge](../assets/bridge.png)
+
+<center>桥接模式结构图</center>
 
 ##### 桥接模式的实现
 
@@ -1686,6 +1744,12 @@ public class ImageClient {
 
 - **桥接模式**则不同，用户可以通过实现接口或类继承的方式对系统进行扩展。
 
+  
+
+  ![adapter-bridge](../assets/adapter-bridge.png)
+
+<center>桥接模式和适配器模式联合使用</center>
+
 实现情景：在某系统的报表处理模块中需要将报表显示和数据输出分开，系统可以有多种报表显示方式也可以有多种数据输出方式，如将数据输出为文本文件，也可以输出为 Excel 文件，如果需要输出 Excel 文件，则需要调用与 Excel 相关的 API，而这个 API 是现有系统所不具备的，该 API 由厂商提供。使用桥接模式和类适配器模式来实现该系统：
 
 - 抽象报表显示类
@@ -1842,6 +1906,12 @@ public class ReportClient {
 - **Leaf（叶子构件）**：它在组合结构中表示叶子节点对象，叶子节点没有子节点，它实现了在抽象构件中定义的行为。对于那些访问及管理子构件的方法，可以通过抛异常、提示错误等方式进行处理。
 
 - **Composite（容器构件）**：它在组合结构中表示容器节点对象，容器节点可以包含子节点，子节点可以是叶子节点也可以容器节点。它提供一个集合用于储存子节点，实现了在抽象构件中定义的行为，包含那些访问及管理子构件的方法，在其业务方法中可以递归调用其子节点的业务方法。
+
+  
+
+  ![composite](../assets/composite.png)
+
+<center>组合模式结构图</center>
 
 ##### 组合模式的实现
 
@@ -2055,9 +2125,18 @@ public class AntivirusClient {
 装饰模式包含以下 4 中角色：
 
 - **Component（抽象构件）**：它是具体构件和抽象装饰类的共同父类，声明了在具体构件中实现的业务方法，它的引入可以使客户端以一致的方式处理未被装饰的对象以及装饰之后的对象，实现客户端的透明操作。
+
 - **ConcreteComponent（具体构件）**：它是抽象构件类的子类，用于定义具体的构建对象，实现了在抽象构件中声明的方法，装饰类可以给它增加额外二代职责（方法）。
+
 - **Decorator（抽象装饰类）**：它也是抽象构件类的子类，用于给具体构件增加职责，但是具体职责在其子类中实现。它维护一个指向抽象构件对象的引用，通过该引用可以调用装饰之前构件对象的方法，并通过其子类扩展该方法，已达到装饰的目的。
+
 - **ConcreteDecorator（具体装饰类）**：它是抽象装饰类的子类，负责向构件添加新的职责。每一个具体装饰类都定义了一些新的行为，它可以调用在抽象装饰类中定义的方法，并可以增加新的方法用于扩充对象的行为。
+
+  
+
+  <img src="../assets/decorator.png" alt="decorator" style="zoom:80%;" />
+
+<center>装饰模式结构图</center>
 
 ##### 装饰模式的实现
 
@@ -2238,7 +2317,14 @@ public class DecoratorClient {
 外观模式包含以下两个角色：
 
 - **Facade（外观角色）**：客户端可以调用它的方法，在外观角色中可以知道相关（一个或多个）子系统的功能和职责；它将所有从客户端发来的请求委派到相应的子系统，传递给相应的子系统对象处理。
+
 - **SubSystem（子系统角色）**：在软件系统中可以有一个或多个子系统角色，每一个子系统可以不是一个单独的类，而是一个类的集合，它实现子系统的功能；每一个子系统都可以被客户端直接调用，或者被外观角色调用，它处理由外观类传过来的请求；子系统并不知道外观的存在，对于子系统而言，外观角色仅仅是另外一个客户端而已。
+
+  
+
+  <img src="../assets/facade.png" alt="facade" style="zoom:60%;" />
+
+<center>外观模式结构图</center>
 
 ##### 外观模式的实现
 
@@ -2405,9 +2491,18 @@ public class FacadeClient {
 享元模式包含以下 4 个角色：
 
 - **Flyweight（抽象享元类）**：抽象享元类通常是一个接口或抽象类，在抽象享元类中声明了具体享元类公共的方法，这些方法可以向外界提供享元对象的内部数据（内部状态），同时也可以通过这些方法来设置外部数据（外部状态）。
+
 - **ConcreteFlyweight（具体享元类）**：具体享元类实现了抽象享元类，**它的实例称为享元对象；在具体享元类中为内部状态提供了存储空间。**通常可以结合单例模式设计具体享元类，为每一个具体享元类提供唯一的享元对象。
+
 - **UnsharedConcreteFlyweight（非共享享元工厂类）**：并不是所有的抽象享元类的子类都需要被共享，不能被共享的子类可设计为非共享具体享元类；当需要一个非共享具体享元类的对象时可以直接实例化创建。
+
 - **FlyweightFactory（享元工厂类）**：享元工厂类用于创建并管理享元对象，它针对抽象享元类编程，将各种类型的具体享元对象存储在一个享元池中，享元池中一般设计为一个存储“键值对‘的集合（也可以是其他类型的集合），可以结合工厂模式进行设计；当用户请求一个具体享元对象时，享元工厂提供一个存储在享元池中已创建好的实例或者创建一个新的实例（如果不存在），返回新创建的实例并将其存储在享元池中。
+
+  
+
+  ![flyweight](../assets/flyweight.png)
+
+<center>享元模式结构图</center>
 
 ##### 享元模式的实现
 
@@ -2617,6 +2712,173 @@ public class FlyweightClient {
 
 ### 代理模式
 
+##### 代理模式的概述及定义
+
+- 概述：代购网站为消费者提供在线的代购服务，顾客如果看中某国外购物网站上的商品，可以登录代购网站填写代购单并付款， 代购网站会帮助进行购买然后通过快递公司将商品发送给消费者。这种模式在软件设计中称为代理模式（Proxy Pattern），代理模式变化形式非常多，常见的代理形式包括远程代理、保护代理、虚拟代理、缓冲代理、智能引用代理。
+- 定义：给某一个对象提供一个代理或占位符，并由代理对象来控制对原对象的访问。 
+
+##### 代理模式的结构
+
+- **Subject（抽象主题角色）**：它声明了真实主题和代理主题的共同接口，这样一来在任何使用真实主题的地方都可以使用代理主题，**客户端通常需要针对抽象主题角色进行编程**。
+
+- **Proxy（代理主题角色）**：它包含了对真实主题的引用，从而可以在任何时候操作真实主题对象；在代理主题角色中提供一个与真实主题角色相同的接口，以便在任何时候都可以替代真实主题；通常，在代理主题角色中，客户端在调用所引用的真实主题操作之前或之后还需要执行其他操作，而不仅仅是单纯调用真实主题对象中的操作。
+
+- **RealSubject（真实主题角色）**：它定义了代理角色所代表的真实对象，在真实主题角色中实现了真实的业务操作，客户端可以通过代理主题角色间接调用真实主题角色中定义的操作。
+
+  <img src="../assets/proxy.png" alt="proxy" style="zoom:67%;" />
+
+<center>静态代理模式结构图</center>
+
+##### 代理模式的分类
+
+- **远程代理（Remote Proxy）**：为一个位于不同的地址空间的对象提供一个本地的代理对象，这 个不同的地址空间可以是在同一台主机中，也可是在另一台远程主机中。远程代理类封装了底层网络通信和对远程对象的调用，其实现较为复杂。
+- **虚拟代理（Virtual Proxy）**：如果需要创建一个资源消耗较大的对象，先创建一个消耗相对较小的对象来表示，真实对象只在需要时才会被真正创建。
+- **保护代理（Protect Proxy）**：控制对一个对象的访问，可以给不同的用户提供不同级别的使用
+  权限。
+- **缓冲代理（Cache Proxy）**：为某一个目标操作的结果提供临时的存储空间，以便多个客户端 可以共享这些结果。
+- **智能引用代理（Smart Reference Proxy）**：当一个对象被引用时，提供一些额外的操作，例如将对象被调用的次数记录下来等。
+
+##### 代理模式的实现
+
+实现情景：开发一款收费商务信息查询系统。要求如下：在进行商务信息**查询之前**用户需要通过身份验证，只有合法用户才能够使用该查询系统；在进行商务信息**查询时**系统需要记录查询日志，以便根据查询次数收取查询费用。目前已完成了商务信息查询模块的开发任务，现希望能够以一种松耦合的方式向原有系统增加身份验证和日志记录功能，客户端代码可以无区别地对待原始的商务信息查询模块和增加新功能之后的商务信息查询模块，而且可能在将来还要在该信息查询模块中增加一些新的功能。
+
+![商务信息系统结构图](../assets/proxy-example.png)
+
+<center>商务信息系统结构图</center>
+
+- 身份验证类（业务类）
+
+```java
+/**
+ * 身份验证类
+ */
+public class AccessValidator {
+
+    public boolean validate(String userId) {
+        System.out.println("在数据库中验证用户’" + userId + "'是否为合法用户？");
+        if (userId.equalsIgnoreCase("杨过")) {
+            System.out.println("'" + userId + "'登录成功！");
+            return true;
+        } else {
+            System.out.println("'" + userId + "'登录失败！");
+            return false;
+        }
+    }
+}
+```
+
+- 日志记录类
+
+```java
+/**
+ * 日志记录类（业务类）
+ */
+public class Logger {
+    //模拟日志记录
+    public void log(String userId) {
+        System.out.println("更新数据库，用户'"+userId+"'查询次数+1");
+    }
+}
+```
+
+- 抽象主题角色
+
+```java
+/**
+ * 抽象查询类，充当抽象主题角色
+ */
+public interface Searcher {
+    String doSearch(String userId, String keyword);
+}
+```
+
+- 具体主题角色
+
+```java
+/**
+ * 具体查询类，充当真是主题角色，它实现查询功能
+ */
+public class RealSearcher implements Searcher {
+    @Override
+    public String doSearch(String userId, String keyword) {
+        System.out.println("用户'"+userId+"'使用关键字"+keyword+"'查询商务信息！");
+        return "返回查询信息";
+    }
+}
+```
+
+- 代理角色
+
+```java
+/**
+ * 代理查询类，充当代理主题角色，它是查询代理
+ * 维持了对 RealSearcher、AccessValidator 和 Logger 对象的引用
+ */
+public class ProxySearcher implements Searcher{
+    //维持了对真实主题的引用
+    private RealSearcher realSearcher = new RealSearcher();
+    private AccessValidator accessValidator;
+    private Logger logger;
+
+    public String doSearch(String userId, String keyword) {
+
+        //如果验证成功，则执行查询
+        if (this.validate(userId)) {
+            String result = realSearcher.doSearch(userId, keyword);
+            this.log(userId);
+            return result;
+        }
+        return null;
+    }
+
+    public boolean validate(String userId) {
+        accessValidator = new AccessValidator();
+        boolean validate = accessValidator.validate(userId);
+        return validate;
+    }
+
+    public void log(String userId) {
+        logger = new Logger();
+        logger.log(userId);
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 代理模式测试客户端
+ */
+public class ProxyClient {
+
+    public static void main(String[] args) {
+        Searcher searcher = new ProxySearcher();
+        String search = searcher.doSearch("杨过", "小龙女");
+        /*
+        在数据库中验证用户'杨过'是否为合法用户？
+        '杨过'登录成功！
+        用户'杨过'使用关键字'小龙女'查询商务信息！
+        更新数据库，用户'杨过'查询次数+1
+        */
+    }
+}
+```
+
+总结：本实例是保护代理和智能引用代理的应用实例，在代理类 ProxySearcher 中实现对真实主题类的权限控制和引用计数，如果需要在访问真实主题时增加新的访问控制机制和新功能，只需增加一个新的代理类。
+
+##### Java 动态代理
+
+
+
+##### 代理模式的优缺点
+
+
+
+##### 代理模式的适用环境
+
+
+
 
 
 ### 职责链模式
@@ -2635,7 +2897,7 @@ public class FlyweightClient {
 
 
 
-### 终结者模式
+### 中介者模式
 
 
 
