--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -88,7 +88,7 @@
 
   
 
-  ![simple-factory](../assets/simple-factory.png)
+  ![simple-factory](../assets/design-pattern/simple-factory.png)
 
 <center>简单工厂模式结构图</center>
 
@@ -239,7 +239,7 @@ public class ChartClient {
 
   
 
-  ![factory-method](../assets/factory-method.png)
+  ![factory-method](../assets/design-pattern/factory-method.png)
 
 <center>工厂方法模式结构图</center>
 
@@ -426,7 +426,7 @@ public class DatabaseLoggerFactory implements LoggerFactory {
 
 - **产品族：**在抽象工厂模式中，产品族是指由同一个工厂生产的位于不同产品等级结构中的一组产品，例如海尔电器工厂生产的海尔电视机、海尔冰箱、海尔电视机位于电视机产品等级结构中，海尔冰箱位于冰箱产品等级结构中，海尔电视机和海尔冰箱构成了一个产品族。~~海尔快给我广告费！~~
 
-![产品等级结构和产品族](../assets/产品等级结构和产品族.png)
+![产品等级结构和产品族](../assets/design-pattern/产品等级结构和产品族.png)
 
 ##### 抽象工厂模式概述及定义
 
@@ -448,7 +448,7 @@ public class DatabaseLoggerFactory implements LoggerFactory {
 
   
 
-  <img src="../assets/abstract-factory.png" alt="abstract-factory" style="zoom:90%;" />
+  <img src="../assets/design-pattern/abstract-factory.png" alt="abstract-factory" style="zoom:90%;" />
 
 <center>抽象工厂模式结构图</center>
 
@@ -723,7 +723,7 @@ class AbstractFactoryXmlUtil {
 
   
 
-  ![builder](../assets/builder.png)
+  ![builder](../assets/design-pattern/builder.png)
 
 <center>建造者模式结构图</center>
 
@@ -1352,13 +1352,13 @@ public class StaticInnerSingleton {
 
   
 
-  <img src="../assets/class-adapter.png" alt="class-adapter" style="zoom:60%;" />
+  <img src="../assets/design-pattern/class-adapter.png" alt="class-adapter" style="zoom:60%;" />
 
   <center>类适配器模式结构图</center>
 
   
 
-  <img src="../assets/object-adapter.png" alt="object-adapter" style="zoom:60%;" />
+  <img src="../assets/design-pattern/object-adapter.png" alt="object-adapter" style="zoom:60%;" />
 
 <center>对象适配器模式结构图</center>
 
@@ -1570,7 +1570,7 @@ public class ConcreteServiceClass extends AbstractServiceClass {
 
   
 
-  ![bridge](../assets/bridge.png)
+  ![bridge](../assets/design-pattern/bridge.png)
 
 <center>桥接模式结构图</center>
 
@@ -1746,7 +1746,7 @@ public class ImageClient {
 
   
 
-  ![adapter-bridge](../assets/adapter-bridge.png)
+  ![adapter-bridge](../assets/design-pattern/adapter-bridge.png)
 
 <center>桥接模式和适配器模式联合使用</center>
 
@@ -1909,7 +1909,7 @@ public class ReportClient {
 
   
 
-  ![composite](../assets/composite.png)
+  ![composite](../assets/design-pattern/composite.png)
 
 <center>组合模式结构图</center>
 
@@ -2134,7 +2134,7 @@ public class AntivirusClient {
 
   
 
-  <img src="../assets/decorator.png" alt="decorator" style="zoom:80%;" />
+  <img src="../assets/design-pattern/decorator.png" alt="decorator" style="zoom:80%;" />
 
 <center>装饰模式结构图</center>
 
@@ -2322,7 +2322,7 @@ public class DecoratorClient {
 
   
 
-  <img src="../assets/facade.png" alt="facade" style="zoom:60%;" />
+  <img src="../assets/design-pattern/facade.png" alt="facade" style="zoom:60%;" />
 
 <center>外观模式结构图</center>
 
@@ -2450,7 +2450,7 @@ public class FacadeClient {
 
 在标准的外观模式结构中，如果需要增加、删除或更换与外观类交互的子系统类，必须修改外观类或客户端代码，这将违反开闭原则。**引入抽象外观类，客户端可以针对抽象外观类编程，对于新的业务需求，不需要修改原有外观类，而对应增加一个新的具体外观类，由新的具体外观类来关联新的子系统对象，同时通过修改配置文件来达到不修改任何源代码并更换外观类的目的。**
 
-<img src="../assets/AbstractFacade.png" alt="AbstractFacade" style="zoom:80%;" />
+<img src="../assets/design-pattern/AbstractFacade.png" alt="AbstractFacade" style="zoom:80%;" />
 
 ##### 外观模式的优缺点
 
@@ -2500,7 +2500,7 @@ public class FacadeClient {
 
   
 
-  ![flyweight](../assets/flyweight.png)
+  ![flyweight](../assets/design-pattern/flyweight.png)
 
 <center>享元模式结构图</center>
 
@@ -2680,13 +2680,13 @@ public class FlyweightClient {
 
   在单纯享元模式中，所有的具体享元类都是可以共享的，不存在非共享具体享元类。结构如图：
 
-  ![pure-flyweight](../assets/pure-flyweight.png)
+  ![pure-flyweight](../assets/design-pattern/pure-flyweight.png)
 
 - 复合享元模式
 
   将一些单纯享元对象使用组合模式加以组合，还可以形成复合享元对象，这样的复合享元对 象本身不能共享，但是它们可以分解成单纯享元对象，而后者则可以共享。结构如图：
 
-  ![composite-flyweight](../assets/composite-flyweight.png)
+  ![composite-flyweight](../assets/design-pattern/composite-flyweight.png)
 
   通过复合享元模式，可以确保复合享元类 CompositeConcreteFlyweight 中所包含的每个单纯享 元类 ConcreteFlyweight 都具有相同的外部状态，而这些单纯享元的内部状态往往可以不同。如果希望为多个内部状态不同的享元对象设置相同的外部状态，可以考虑使用复合享元模式。
 
@@ -2714,7 +2714,7 @@ public class FlyweightClient {
 
 ##### 代理模式的概述及定义
 
-- 概述：代购网站为消费者提供在线的代购服务，顾客如果看中某国外购物网站上的商品，可以登录代购网站填写代购单并付款， 代购网站会帮助进行购买然后通过快递公司将商品发送给消费者。这种模式在软件设计中称为代理模式（Proxy Pattern），代理模式变化形式非常多，常见的代理形式包括远程代理、保护代理、虚拟代理、缓冲代理、智能引用代理。
+- 概述：代购网站为消费者提供在线的代购服务，顾客如果看中某国外购物网站上的商品，可以登录代购网站填写代购单并付款， 代购网站会帮助进行购买然后通过快递公司将商品发送给消费者。这种模式在软件设计中称为代理模式（Proxy Pattern），代理模式变化形式非常多，常见的代理形式包括远程代理、保护代理、虚拟代理、缓存代理、智能引用代理。
 - 定义：给某一个对象提供一个代理或占位符，并由代理对象来控制对原对象的访问。 
 
 ##### 代理模式的结构
@@ -2725,24 +2725,24 @@ public class FlyweightClient {
 
 - **RealSubject（真实主题角色）**：它定义了代理角色所代表的真实对象，在真实主题角色中实现了真实的业务操作，客户端可以通过代理主题角色间接调用真实主题角色中定义的操作。
 
-  <img src="../assets/proxy.png" alt="proxy" style="zoom:67%;" />
+  <img src="../assets/design-pattern/proxy.png" alt="proxy" style="zoom:67%;" />
 
 <center>静态代理模式结构图</center>
 
 ##### 代理模式的分类
 
 - **远程代理（Remote Proxy）**：为一个位于不同的地址空间的对象提供一个本地的代理对象，这 个不同的地址空间可以是在同一台主机中，也可是在另一台远程主机中。远程代理类封装了底层网络通信和对远程对象的调用，其实现较为复杂。
-- **虚拟代理（Virtual Proxy）**：如果需要创建一个资源消耗较大的对象，先创建一个消耗相对较小的对象来表示，真实对象只在需要时才会被真正创建。
+- **虚拟代理（Virtual Proxy）**：对于一些占用系统资源较多或者加载时间较长的对象，可以给这些对象提供一个虚拟代理。在真实对象创建成功之前虚拟代理扮演真实对象的替身，而当真实对象创建之后，虚拟代理将用户的请求转发给真实对象。
 - **保护代理（Protect Proxy）**：控制对一个对象的访问，可以给不同的用户提供不同级别的使用
   权限。
-- **缓冲代理（Cache Proxy）**：为某一个目标操作的结果提供临时的存储空间，以便多个客户端 可以共享这些结果。
+- **缓存代理（Cache Proxy）**：它为某一个操作的结果提供临时的缓存存储空间，以便在后续使用中能够共享这些结果，从而可以避免某些方法的重复执行，优化系统性能。
 - **智能引用代理（Smart Reference Proxy）**：当一个对象被引用时，提供一些额外的操作，例如将对象被调用的次数记录下来等。
 
 ##### 代理模式的实现
 
 实现情景：开发一款收费商务信息查询系统。要求如下：在进行商务信息**查询之前**用户需要通过身份验证，只有合法用户才能够使用该查询系统；在进行商务信息**查询时**系统需要记录查询日志，以便根据查询次数收取查询费用。目前已完成了商务信息查询模块的开发任务，现希望能够以一种松耦合的方式向原有系统增加身份验证和日志记录功能，客户端代码可以无区别地对待原始的商务信息查询模块和增加新功能之后的商务信息查询模块，而且可能在将来还要在该信息查询模块中增加一些新的功能。
 
-![商务信息系统结构图](../assets/proxy-example.png)
+![商务信息系统结构图](../assets/design-pattern/proxy-example.png)
 
 <center>商务信息系统结构图</center>
 
@@ -2869,15 +2869,133 @@ public class ProxyClient {
 
 ##### Java 动态代理
 
+动态代理（Dynamic Proxy）可以让系统在运行时根据实际需要来动态创建代理类，让同一个代理类能够代理多个不同的真实主题类而且可以代理不同的方法。动态代理是一种较为高级的代理模式，它在事务管理、AOP（面向切面编程）等领域发挥了重要作用。从 Java 1.3 开始，Java 语言在 java.lang.reflect 包下提供了用于支持动态代理的相关类。
 
+###### Proxy 类
+
+Proxy 类提供了用于创建动态代理类和实例对象的方法，它是所创建的动态代理类的父类，它最常用的方法：
+
+- public static Class<?> **getProxyClass**(ClassLoader loader, Class<? > … interfaces) ：该方法用于返回一个 Class 类型的代理类，在参数中需要提供类加载器并需要指定代理的接口数组（与真实主题类的接口列表一致）。
+- public static Object **newProxyInstance**(ClassLoader loader, Class<?>[ ] interfaces, InvocationHandler h) ：该方法用于返回一个动态创建的代理类的实例，方法中第一个参数 loader 表示代理类的类加载器，第二个参数 interfaces 表示代理类所实现的接口列表，第三个参数 h 表示所指派的调用处理程序类。
+
+###### InvocationHandler 接口
+
+InvocationHandler 接口是代理处理程序类的实现接口，该接口作为代理实例的调用处理者的公共父类，每一个代理类的实例都可以提供一个相关的具体调用处理者（此接口的实现类），该接口中声明了如下方法：
+
+- public Object **invoke**(Object proxy, Method method, Object[ ] args)：该方法用于处理对代理实例类的方法调用并返回相应的结果，当一个代理实例中的业务方法被调用时将自动调用该方法。invoke() 方法包含 3 个参数，其中第一个参数 proxy 表示代理类的实例，第二个参数 method 表示需要代理的方法，第三个参数 args 表示代理方法的参数数组。
+
+动态代理类需要在运行时指定所代理真实主题类的接口，客户端在调用动态代理对象的方法时调用请求会将请求自动转发给 InvocationHandler 对象的 invoke() 方法，由 invoke() 方法来实现对请求的统一处理。
+
+###### Java 动态代理实现
+
+实现情景：某公司要为公司 OA 系统数据访问层 DAO 增加方法调用日志，记录每一个方法被调用的时间和调用结果，现使用动态代理进行设计和实现：
+
+- 抽象主题角色
+
+```java
+/**
+ * 抽象用户 DAO 类，充当抽象主题角色
+ */
+public interface AbstractUserDAO {
+    Boolean findUserById(String userId);
+}
+```
+
+- 具体主题角色
+
+```java
+/**
+ * 用户 DAO 类，充当具体主题角色
+ */
+public class UserDAO implements AbstractUserDAO {
+    @Override
+    public Boolean findUserById(String userId) {
+        if (userId.equalsIgnoreCase("张无忌")) {
+            System.out.println("查询 ID 为'" + userId + "'的用户信息成功！");
+            return true;
+        } else {
+            System.out.println("查询 ID 为'" + userId + "'的用户信息失败！");
+            return null;
+        }
+    }
+}
+```
+
+- 自定义请求处理程序类
+
+```java
+/**
+ * 自定义请求处理程序类
+ */
+public class DAOLogHandler implements InvocationHandler {
+    private Object object;
+    //注入一个需要提供代理的真实主题对象
+    public DAOLogHandler(Object object) {
+        this.object = object;
+    }
+    @Override
+    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+        //调用之前增强
+        beforeInvoke();
+        Object result = method.invoke(this.object, args);
+        //调用之后增强
+        afterInvoke();
+        return result;
+    }
+    private void beforeInvoke() {
+        System.out.println("调用时间：" + LocalDateTime.now());
+    }
+    private void afterInvoke() {
+        System.out.println("方法调用结束！");
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 动态代理测试客户端
+ */
+public class DynamicProxyClient {
+
+    public static void main(String[] args) {
+        //创建真实主题类
+        AbstractUserDAO userDAO = new UserDAO();
+        //创建请求处理程序类
+        InvocationHandler handler = new DAOLogHandler(userDAO);
+
+        AbstractUserDAO proxy = (AbstractUserDAO)Proxy.newProxyInstance(
+                AbstractUserDAO.class.getClassLoader(),
+                new Class[]{AbstractUserDAO.class},
+                handler);
+
+        proxy.findUserById("张无忌");
+    }
+}
+```
+
+总结：**JDK 中提供的动态代理只能代理一个或多个接口**，如果需要动态代理具体类或抽象类，可以使用 CGLib（Code Generation Library）等工具。
 
 ##### 代理模式的优缺点
 
+优点：
 
+- 能够协调调用者和被调用者，在一定程度上降低了系统的耦合度。
+- 可以对被代理对象的方法进行增强（包含调用前增强和调用后增强）。
+
+缺点：
+
+- 由于在客户端和真实主题之间增加了代理对象，因此有些类型的代理模式可能会造成请求的处理速度变慢，例如保护代理。
+- 实现代理模式需要额外的工作，而且有些代理模式的实现过程较为复杂，例如远程代理。
 
 ##### 代理模式的适用环境
 
-
+- 当客户端对象需要访问远程主机中的对象时可以使用远程代理。
+- 当需要用一个消耗资源较少的对象来代表一个消耗资源较多的对象，从而降低系统开销、 缩短运行时间时可以使用虚拟代理，例如一个对象需要很长时间才能完成加载时。
+- 当需要为某一个被频繁访问的操作结果提供一个临时存储空间，以供多个客户端共享访问这些结果时可以使用缓冲代理。通过使用缓冲代理，系统无须在客户端每一次访问时都重新执行操作，只需直接从临时缓冲区获取操作结果即可。
+- 当需要控制对一个对象的访问，为不同用户提供不同级别的访问权限时可以使用保护代理。
+- 当需要为一个对象的访问（引用）提供一些额外的操作时可以使用智能引用代理。
 
 
 
