--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -3001,9 +3001,231 @@ public class DynamicProxyClient {
 
 ### 职责链模式
 
+##### 职责链模式概述及定义
+
+- 概述：职责链可以是一条直线、一个环或者一个树形结构，最常见的职责链是直线型，即沿着一条单向的链来传递请求。链上的每一个对象都是请求处理者，职责链模式可以将请求的处理者组织成一条链，并让请求沿着链传递，由链上的处理者对请求进行相应的处理，客户端无须关心请求的处理细节以及请求的传递，只需将请求发送到链上即可，实现请求发送者和请求处理者解耦。
+- 定义：避免请求发送者与接收者耦合在一起，让多个对象都有可能接收请求，将这些对象连接成一条链，并且沿着这条链传递请求，直到有对象处理它为止。职责链模式是一种对象行为型模式。
+
+##### 职责链模式的结构
+
+职责链模式有如下 2 个角色：
+
+- Handler（抽象处理者）：它定义了一个处理请求的接口，一般设计为抽象类，由于不同的具体处理者处理请求的方式不同，因此在其中定义了抽象请求处理方法。因为每一个处理者的下家还是一个处理者，因此在抽象处理者中定义了一个抽象处理者类型的对象，作为其对下家的引用。通过该引用，处理者可以连成一条链。
+- ConcreteHandler（具体处理者）：它是抽象处理者的子类，可以处理用户请求，在具体处理 者类中实现了抽象处理者中定义的抽象请求处理方法，在处理请求之前需要进行判断，看是否有相应的处理权限，如果可以处理请求就处理它，否则将请求转发给后继者；在具体处理者中可以访问链中下一个对象，以便请求的转发。
+
+<img src="../assets/design-pattern/chain-of-responsibility.png" alt="chain-of-responsibility" style="zoom: 80%;" />
+
+<center>职责链模式的结构图</center>
+
+##### 职责链模式的实现
+
+实现情景：某企业的 SCM（Supply Chain Management）供应链管理系统中包含一个采购单审批子系统。该采购审批是分级进行的，根据采购金额的不同由不同层次的人员来审批。主任 [ 0,5万 )、副董事长 [ 5 万, 10 万 )、董事长 [ 10 万, 50 万 ) 和董事会 [ 50 万, n ) 都可以处理采购单。
+
+- 采购单类，充当请求类
+
+```java
+/**
+ * 采购单类，充当请求类
+ */
+public class PurchaseRequest {
+    //采购金额
+    private double amount;
+    //采购目的
+    private String purpose;
+    //采购单编号
+    private int number;
+	//省略 getter 和 setter
+    public PurchaseRequest(double amount, int number, String purpose) {
+        this.amount = amount;
+        this.purpose = purpose;
+        this.number = number;
+    }
+}
+```
+
+- 抽象处理者
+
+```java
+/**
+ * 审批者类，充当抽象处理者
+ */
+public abstract class Approver {
+
+    //定义后继对象
+    protected Approver successor;
+    //审批者名称
+    protected String name;
+
+    public Approver(String name) {
+        this.name = name;
+    }
+
+    //设置后继者
+    public void setSuccessor(Approver successor) {
+        this.successor = successor;
+    }
+
+    //抽象请求处理方法
+    public abstract void processRequest(PurchaseRequest request);
+}
+```
+
+- 具体处理者
+
+```java
+/**
+ * 主任类，充当具体处理者
+ */
+public class Director extends Approver {
+    public Director(String name) {
+        super(name);
+    }
+
+    //具体请求处理方法
+    public void processRequest(PurchaseRequest request) {
+        if (request.getAmount() < 50000) {
+            System.out.println(
+                    "主任" + this.name +
+                            "审批采购单：" + request.getNumber() +
+                            "，金额：" + request.getAmount() +
+                            "元，采购目的：" + request.getPurpose() + ". ");
+        } else {
+            //转发请求
+            this.successor.processRequest(request);
+        }
+    }
+}
+
+/**
+ * 副董事长，充当具体处理者
+ */
+public class VicePresident extends Approver {
+    public VicePresident(String name) {
+        super(name);
+    }
+
+    //具体请求处理方法
+    public void processRequest(PurchaseRequest request) {
+        if (request.getAmount() < 100000) {
+            System.out.println(
+                    "副董事长" + this.name +
+                            "审批采购单：" + request.getNumber() +
+                            "，金额：" + request.getAmount() +
+                            "元，采购目的：" + request.getPurpose() + ". ");
+        } else {
+            //转发请求
+            this.successor.processRequest(request);
+        }
+    }
+}
+
+/**
+ * 董事长，充当具体处理者
+ */
+public class President extends Approver {
+    public President(String name) {
+        super(name);
+    }
+
+    //具体请求处理方法
+    public void processRequest(PurchaseRequest request) {
+        if (request.getAmount() < 500000) {
+            System.out.println(
+                    "董事长" + this.name +
+                            "审批采购单：" + request.getNumber() +
+                            "，金额：" + request.getAmount() +
+                            "元，采购目的：" + request.getPurpose() + ". ");
+        } else {
+            //转发请求
+            this.successor.processRequest(request);
+        }
+    }
+}
+
+/**
+ * 董事会，充当具体处理者
+ */
+public class Congress extends Approver {
+    public Congress(String name) {
+        super(name);
+    }
+
+    //具体请求处理方法
+    public void processRequest(PurchaseRequest request) {
+        System.out.println(this.name +
+                "审批采购单：" + request.getNumber() +
+                "，金额：" + request.getAmount() +
+                "元，采购目的：" + request.getPurpose() + ". ");
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 职责链模式测试客户端
+ */
+public class ApproveRClient {
+
+    public static void main(String[] args) {
+        Approver wjzhang, gyang, jguo, meeting;
+        wjzhang = new Director("张无忌");
+        gyang = new VicePresident("杨过");
+        jguo = new President("郭靖");
+        meeting = new Congress("董事会");
+        
+        //创建职责链
+        wjzhang.setSuccessor(gyang);
+        gyang.setSuccessor(jguo);
+        jguo.setSuccessor(meeting);
+        
+        //创建采购单
+        PurchaseRequest pr1 = new PurchaseRequest(45000, 01, "购买倚天剑");
+        wjzhang.processRequest(pr1);
+        PurchaseRequest pr2 = new PurchaseRequest(60000, 02, "购买《葵花宝典》");
+        wjzhang.processRequest(pr2);
+        PurchaseRequest pr3 = new PurchaseRequest(160000, 03, "购买《金刚经》");
+        wjzhang.processRequest(pr3);
+        PurchaseRequest pr4 = new PurchaseRequest(800000, 04, "购买桃花岛");
+        wjzhang.processRequest(pr4);
+    }
+}
+```
+
+总结：**职责链模式并不负责创建职责链，一般是在使用该职责链的客户端中创建职责链**。职责链模式通过建立一条链来组织请求的处理者，请求将沿着链进行传递。在软件开发中，如果遇到有多个对象可以处理同一请求时可以应用职责链模式，例如在 Web 应用开发中创建一个过滤器（Filter）链来对请求数据进行过滤，在工作流系统中实现公文的分级审批等。
+
+##### 纯与不纯的职责链模式
+
+- 纯的职责链模式
+
+  它要求一个具体处理者对象只能在两个行为中选择一个：要么承担全部责 任，要么将责任推给下家，不允许出现某一个具体处理者对象在承担了一部分或全部责任后又将责任向下传递的情况。此外，还要求一个请求必须被某一个处理者对象所接收，不能出现某个请求未被任何一个处理者对象处理的情况。在前面实例就是纯的职责链模式。
+
+- 不纯的职责链模式
+
+  它允许某个请求被一个具体处理者部分处理后再向下传递，或者一 个具体处理者处理完某请求后其后继处理者可以继续处理该请求，而且一个请求可以最终不被任何处理者对象所接收。
+
+##### 职责链模式的优缺点
+
+优点：
+
+- 职责链模式使得一个对象无须知道是其他哪一个对象处理其请求，对象仅需知道该请求会被处理即可，且链中的对象不需要知道链的结构， **由客户端负责链的创建**，降低了系统耦合度。
+- 请求处理对象仅需维持一个指向其后继者的引用，而不需要维持它对所有的候选处理者的引用，可简化对象的相互连接。
+- 在给对象分派职责时，职责链可以给我们更多的灵活性，可以通过在运行时对该链进行动态的增加或修改来增加或改变处理一个请求的职责。
+
+缺点：
+
+- 由于一个请求没有明确的接收者，那么就不能保证它一定会被处理，该请求可能一直到链的末端都得不到处理；一个请求也可能因职责链没有被正确配置而得不到处理。
+- 对于比较长的职责链，请求的处理可能涉及到多个处理对象，系统性能将受到一定影响， 而且在进行代码调试时不太方便。
+- 如果建链不当，可能会造成循环调用，将导致系统陷入死循环。
+
+##### 职责链模式的适用环境
+
+- 有多个对象可以处理同一个请求，具体哪个对象处理该请求待运行时刻再确定，客户端只需将请求提交到链上，而无须关心请求的处理对象是谁以及它是如何处理的。
+- 在不明确指定接收者的情况下，向多个对象中的一个提交一个请求。
+- 可动态指定一组对象处理请求，客户端可以动态创建职责链来处理请求，还可以改变链中处理者之间的先后次序。
 
 
-### 命令模式
 
 
 
