--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -3227,6 +3227,336 @@ public class ApproveRClient {
 
 
 
+### 命令模式
+
+##### 命令模式概述及定义
+
+- 概述：在软件开发中，我们经常需要向某些对象发送请求，但是并不知道请求的接收者是谁，也不知道被请求的操作是哪个，此时，我们特别希望能够以一种松耦合的方式来设计软件，使得请求发送者与请求接收者能够消除彼此之间的耦合，让对象之间的调用关系更加灵活，可以灵活地指定请求接收者以及被请求的操作。
+- 定义：将一个请求封装为一个对象，从而让我们可用不同的请求对客户进行参数化；对请求排队或者记录请求日志，以及支持可撤销的操作。命令模式是一种对象行为型模式。
+
+##### 命令模式的结构
+
+- Command（抽象命令类）：抽象命令类一般是一个抽象类或接口，在其中声明了用于执行请求的 execute() 等方法，通过这些方法可以调用请求接收者的相关操作。
+- ConcreteCommand（具体命令类）：具体命令类是抽象命令类的子类，实现了在抽象命令类 中声明的方法，它对应具体的接收者对象，将接收者对象的动作绑定其中。在实现 execute() 方 法时，将调用接收者对象的相关操作（Action）。
+- Invoker（调用者）：调用者即请求发送者，它通过命令对象来执行请求。一个调用者并不需要在设计时确定其接收者，因此它只与抽象命令类之间存在关联关系。在程序运行时可以将一个具体命令对象注入其中，再调用具体命令对象的 execute() 方法，从而实现间接调用请求接收者的相关操作。
+- Receiver（接收者）：接收者执行与请求相关的操作，它具体实现对请求的业务处理。
+
+<img src="../assets/design-pattern/command.png" alt="command" style="zoom:80%;" />
+
+<center>命令模式的结构图</center>
+
+##### 命令模式的实现
+
+实现情景：为了方便用户使用，某系统提供了一系列功能键，用户可以自定义功能键的功能，例如功能键 FunctionButton 可以用于退出系统（由 SystemExit 类实现），也可以用于显示帮助文档（由 DisplayHelp 类实现）。
+
+- 请求调用者
+
+```java
+/**
+ * 功能键类，充当请求调用者
+ */
+public class FunctionButton {
+    //维持一个抽象命令对象的引用
+    private Command command;
+
+    //将功能键注入命令
+    public FunctionButton(Command command) {
+        this.command = command;
+    }
+
+    public void click() {
+        System.out.println("单击功能键！");
+        command.execute();
+    }
+}
+```
+
+- 抽象命令类
+
+```java
+/**
+ * 抽象命令类
+ */
+public abstract class Command {
+
+    public abstract void execute();
+}
+```
+
+- 具体命令类
+
+```java
+/**
+ * 退出命令类，充当具体命令类
+ */
+public class ExitCommand extends Command {
+    //维持对请求接收者的引用
+    private SystemExit systemExit;
+
+    public ExitCommand() {
+        this.systemExit = new SystemExit();
+    }
+
+    //命令执行方法，将调用请求接收者的业务方法
+    @Override
+    public void execute() {
+        systemExit.exit();
+    }
+}
+
+/**
+ * 帮助命令类，充当具体命令类
+ */
+public class HelpCommand extends Command {
+    //维持对请求接收者的引用
+    private DisplayHelp displayHelp;
+
+    public HelpCommand() {
+        this.displayHelp = new DisplayHelp();
+    }
+
+    //命令执行方法，将调用请求接收者的业务方法
+    @Override
+    public void execute() {
+        displayHelp.display();
+    }
+}
+```
+
+- 请求接收者
+
+```java
+/**
+ * 退出系统，充当请求接收者
+ */
+public class SystemExit {
+    public void exit() {
+        System.out.println("退出系统！");
+    }
+}
+
+/**
+ * 显示帮助文档，充当请求接收者
+ */
+public class DisplayHelp {
+    public void display() {
+        System.out.println("显示帮助文档！");
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 命令模式测试客户端
+ */
+public class CommandClient {
+    public static void main(String[] args) {
+        //可以通过配置文件配置具体命令类
+        Command command = new HelpCommand();
+        FunctionButton functionButton = new FunctionButton(command);
+
+        functionButton.click();
+        //单击功能键！
+        //显示帮助文档！
+    }
+}
+```
+
+总结：如果需要增加新的功能，只需要对应增加一个新的具体命令类，在新的具体命令类中调用新功能类的业务方法。
+
+##### 命令队列的实现
+
+有时候我们需要将多个请求排队，当一个请求发送者发送一个请求时，将不止一个请求接收者产生响应，这些请求接收者将逐个执行业务方法，完成对请求的处理。此时，我们可以通过命令队列来实现。
+
+命令队列最常用、灵活性最好的一种实现方式是增加一个 CommandQueue 类，由该类来负责存储多个命令对象，而不同的命令对象可以对应不同的请求接收者，CommandQueue 类的典型代码如下所示： 
+
+```java
+/**
+ * CommandQueue 负责存储多个命令对象
+ */
+public class CommandQueue {
+    //定义一个 List 来存储命令队列
+    private List<Command> commandList = new ArrayList<>();
+
+    public void addCommand(Command command) {
+        commandList.add(command);
+    }
+
+    public void removeCommand(Command command) {
+        commandList.remove(command);
+    }
+
+    //循环调用每一个命令对象的 execute() 方法
+    public void execute() {
+        for (Command command : commandList) {
+            command.execute();
+        }
+    }
+}
+```
+
+在增加了命令队列类 CommandQueue 以后，请求发送者类 Invoker 将针对 CommandQueue 编程， 代码修改如下：
+
+```java
+/**
+ * Invoker 调用者
+ */
+public class Invoker {
+    //维持一个 CommandQueue 对象的引用
+    private CommandQueue commandQueue;
+
+    //构造注入
+    public Invoker(CommandQueue commandQueue) {
+        this.commandQueue = commandQueue;
+    }
+
+    //调用 CommandQueue 类的 execute() 方法
+    public void call() {
+        commandQueue.execute();
+    }
+}
+```
+
+总结：命令队列与我们常说的“批处理”有点类似，可以对一组对象（命令）进行批量处理，当一个发送者发送请求后，将有一系列接收者对请求作出响应，命令队列可以用于设计批处理应用程序，如果请求接收者的接收次序没有严格的先后次序，我们还可以使用多线程技术来并发调用命令对象的 execute() 方法，从而提高程序的执行效率。
+
+##### 撤销操作的实现
+
+在命令模式中，我们可以通过调用一个命令对象的 execute() 方法来实现对请求的处理，如果需要撤销（Undo）请求，可通过在命令类中增加一个逆向操作来实现。
+
+实现情景：开发一个简易的计算器，它可以实现简单的数学运算，还可以对运算实施撤销操作。
+
+- 请求发送者
+
+```java
+/**
+ * 充当请求发送者
+ */
+public class CalculatorForm {
+    private AbstractCommand command;
+
+    public void setCommand(AbstractCommand command) {
+        this.command = command;
+    }
+
+    //调用命令对象的 execute() 方法执行运算
+    public void compute(int value) {
+        int i = command.execute(value);
+        System.out.println("执行运算，运算结果为：" + i);
+    }
+
+    //调用命令对象的 undo() 方法执行撤销
+    public void undo() {
+        int i = command.undo();
+        System.out.println("执行撤销，运算结果为：" + i);
+    }
+}
+```
+
+- 抽象命令类
+
+```java
+/**
+ * 抽象命令类
+ */
+public abstract class AbstractCommand {
+    //声明命令执行方法execute()
+    public abstract int execute(int value);
+
+    //声明撤销方法 undo()
+    public abstract int undo();
+}
+```
+
+- 具体命令类
+
+```java
+/**
+ * 具体命令类
+ */
+public class ConcreteCommand extends AbstractCommand {
+    private Adder adder = new Adder();
+    private int value;
+
+    //实现抽象命令类中声明的 execute() 方法，调用加法类的加法操作
+    public int execute(int value) {
+        this.value = value;
+        return adder.add(value);
+    }
+
+    //实现抽象命令类中声明的 undo() 方法，通过加一个相反数来实现加法的逆向操作
+    public int undo() {
+        return adder.add(-value);
+    }
+}
+```
+
+- 请求接收者
+
+```java
+/**
+ * 加法类，充当请求接收者
+ */
+public class Adder {
+    //定义初始值为0
+    private int num = 0;
+
+    //加法操作，每次将传入的值与 num 作加法运算
+    public int add(int value) {
+        num += value;
+        return num;
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 计算器测试客户端
+ */
+public class CalculatorClient {
+    public static void main(String args[]) {
+        CalculatorForm form = new CalculatorForm();
+        AbstractCommand command;
+        command = new ConcreteCommand();
+        //向发送者注入命令对象
+        form.setCommand(command);
+
+        form.compute(10);
+        form.compute(5);
+        form.compute(20);
+        form.undo();
+    }
+}
+```
+
+##### 宏命令
+
+宏命令（Macro Command）又称为组合命令，它是组合模式和命令模式联用的产物。宏命令是一 个具体命令类，它拥有一个集合属性，在该集合中包含了对其他命令对象的引用。通常宏命令不直接与请求接收者交互，而是通过它的成员来调用接收者的方法。当调用宏命令的 execute() 方法时，将递归调用它所包含的每个成员命令的 execute() 方法，一个宏命令的成员可以是简单命令，还可以继续是宏命令。其结构图如下：
+
+<img src="../assets/design-pattern/macro-command.png" alt="macro-command" style="zoom:80%;" />
+
+##### 命令模式的优缺点
+
+优点：
+
+- 降低系统的耦合度。由于请求者与接收者之间不存在直接引用，因此请求者与接收者之间实现完全解耦，相同的请求者可以对应不同的接收者，同样，相同的接收者也可以供不同的请求者使用，两者之间具有良好的独立性。、
+- 可以比较容易地设计一个命令队列或宏命令（组合命令）。
+- 为请求的撤销（Undo）和恢复（Redo）操作提供了一种设计和实现方案。
+
+缺点：
+
+- 使用命令模式可能会导致某些系统有过多的具体命令类。因为针对每一个对请求接收者的调用操作都需要设计一个具体命令类，因此在某些系统中可能需要提供大量的具体命令类。
+
+##### 命令模式的适用环境
+
+- 系统需要将请求调用者和请求接收者解耦，使得调用者和接收者不直接交互。请求调用者无须知道接收者的存在，也无须知道接收者是谁，接收者也无须关心何时被调用。
+- 系统需要在不同的时间指定请求、将请求排队和执行请求。一个命令对象和请求的初始调用者可以有不同的生命期，换言之，最初的请求发出者可能已经不在了，而命令对象本身仍然是活动的，可以通过该命令对象去调用请求接收者，而无须关心请求调用者的存在性，可以通过请求日志文件等机制来具体实现。
+- 系统需要支持命令的撤销（Undo）操作和恢复（Redo）操作。
+- 系统需要将一组操作组合在一起形成宏命令。
+
 
 
 ### 解释器模式
