新增 解释器模式

--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -3561,6 +3561,66 @@ public class CalculatorClient {
 
 ### 解释器模式
 
+##### 解释器模式概述及定义
+
+- 概述：它用于描述如何使用面向对象语言构成一个简单的语言解释器。在某些情况下，为了更好地描述某一些特定类型的问题，我们可以创建一种新的语言，这种语言拥有自己的表达式和结构，即文法规则，这些问题的实例将对应为该语言中的句子。此时，可以使用解释器模式来设计这种新的语言。对解释器模式的学习能够加深我们对面向对象思想的理解，并且掌握编程语言中文法规则的解释过程。
+- 定义：定义一个语言的文法，并且建立一个解释器来解释该语言中的句子，这里的“语言”是指使用规定格式和语法的代码。解释器模式是一种类行为型模式。
+
+##### 文法规则和抽象语法树
+
+如“1+2+3–4+1”，包含了三个语言单位，可以使用如下文法规则来定义：
+
+```java
+expression ::= value | operation
+operation ::= expression '+' expression | expression '-' expression 
+value ::= an integer //一个整数值
+```
+
+该文法规则包含三条语句，第一条表示表达式的组成方式，其中 value 和 operation 是后面两个语言单位的定义，每一条语句所定义的字符串如 operation 和 value 称为语言构造成分或语言单位，符号“::=”表示“定义为”的意思，其左边的语言单位通过右边来进行说明和定义，语言单位对应终结符表达式和非终结符表达式。如本规则中的 operation 是非终结符表达式，它的组成元素仍然可以是表达式，可以进一步分解，而 value 是终结符表达式，它的组成元素是最基本的语言单位，不能再进行分解。
+
+在解释器模式中还可以通过一种称之为抽象语法树（Abstract Syntax Tree，AST）的图形方式来直观地表示语言的构成，每一棵抽象语法树对应一个语言实例。语句“1+2+3–4+1”可以用下图表示：
+
+<img src="../assets/design-pattern/abstract-syntax-tree-1.png" alt="abstract-syntax-tree-1" style="zoom:60%;" />
+
+在该抽象语法树中，可以通过终结符表达式 value 和非终结符表达式 operation 组成复杂的语句，在图中终结符表达式类的实例作为树的叶子节点，而非终结符表达式类的实例作为非叶子节点，它们可以将终结符表达式类的实例以及包含终结符和非终结符实例的子表达式作为其子节点。抽象语法树描述了如何构成一个复杂的句子，通过对抽象语法树的分析，可以识别出语言中的终结符类和非终结符类。
+
+##### 解释器模式的结构
+
+解释器模式包含如下 4 个角色：
+
+- AbstractExpression（抽象表达式）：在抽象表达式中声明了抽象的解释操作，它是所有终结 符表达式和非终结符表达式的公共父类。
+- TerminalExpression（终结符表达式）：终结符表达式是抽象表达式的子类，它实现了与文法 中的终结符相关联的解释操作，在句子中的每一个终结符都是该类的一个实例。通常在一个解释器模式中只有少数几个终结符表达式类，它们的实例可以通过非终结符表达式组成较为复杂的句子。
+- NonterminalExpression（非终结符表达式）：非终结符表达式也是抽象表达式的子类，它实现了文法中非终结符的解释操作，由于在非终结符表达式中可以包含终结符表达式，也可以继续包含非终结符表达式，因此其解释操作一般通过递归的方式来完成。
+- Context（环境类）：环境类又称为上下文类，它用于存储解释器之外的一些全局信息，通常它临时存储了需要解释的语句。
+
+##### 解释器模式的实现
+
+实现场景：开发一套机器人控制程序，在该机器人控制程序中包含一些简单的英文控制指令，每一个指令对应一个表达式（expression），该表达式可以是简单表达式也可以是复合表达式，每一个简单表达式由移动方向（direction），移动方式（action）和移动距离 （distance）三部分组成，其中移动方向包括上（up）、下（down）、左（left）、右（right）；移动方式包括移动（move）和快速移动（run）；移动距离为一个正整数。两个表达式之间可以通过与（and）连接，形成复合（composite）表达式。
+
+用户通过对图形化操作实现输入一个机器人控制指令，机器人在收到指令后将按照指令的设置进行移动。例如输入控制指令：down run 10 and left move 20，则“向下快速移动 10 个单位再向左移动 20 个单位”。文法规则如下：
+
+```java
+expression	::=	direction action distance |	composite //表达式 
+composite	::=	expression 'and' expression	//复合表达式 
+direction	::=	'up' | 'down' | 'left'	| 'right' //移动方向 
+action	::=	'move' | 'run' //移动方式 
+distance ::=	an integer	//移动距离
+```
+
+
+
+上述语言一共定义了五条文法规则，对应五个语言单位，这些语言单位可以分为两类，一类为终结符，例如 direction、action 和 distance，它们是语言的最小组成单位；另一类为非终结符，例如 expression 和 composite，它们都是一个完整的句子，包含一系列终结符或非终结符。
+
+
+
+##### 解释器模式的优缺点
+
+
+
+##### 解释器模式的适用环境
+
+
+
 
 
 ### 迭代器模式
