--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -3593,6 +3593,10 @@ value ::= an integer //一个整数值
 - NonterminalExpression（非终结符表达式）：非终结符表达式也是抽象表达式的子类，它实现了文法中非终结符的解释操作，由于在非终结符表达式中可以包含终结符表达式，也可以继续包含非终结符表达式，因此其解释操作一般通过递归的方式来完成。
 - Context（环境类）：环境类又称为上下文类，它用于存储解释器之外的一些全局信息，通常它临时存储了需要解释的语句。
 
+<img src="../assets/design-pattern/interpreter.png" alt="interpreter" style="zoom:80%;" />
+
+<center>解释器模式结构图</center>
+
 ##### 解释器模式的实现
 
 实现场景：开发一套机器人控制程序，在该机器人控制程序中包含一些简单的英文控制指令，每一个指令对应一个表达式（expression），该表达式可以是简单表达式也可以是复合表达式，每一个简单表达式由移动方向（direction），移动方式（action）和移动距离 （distance）三部分组成，其中移动方向包括上（up）、下（down）、左（left）、右（right）；移动方式包括移动（move）和快速移动（run）；移动距离为一个正整数。两个表达式之间可以通过与（and）连接，形成复合（composite）表达式。
@@ -3600,26 +3604,64 @@ value ::= an integer //一个整数值
 用户通过对图形化操作实现输入一个机器人控制指令，机器人在收到指令后将按照指令的设置进行移动。例如输入控制指令：down run 10 and left move 20，则“向下快速移动 10 个单位再向左移动 20 个单位”。文法规则如下：
 
 ```java
-expression	::=	direction action distance |	composite //表达式 
-composite	::=	expression 'and' expression	//复合表达式 
-direction	::=	'up' | 'down' | 'left'	| 'right' //移动方向 
-action	::=	'move' | 'run' //移动方式 
-distance ::=	an integer	//移动距离
+expression ::= direction action distance | composite //表达式 
+composite ::= expression 'and' expression //复合表达式 
+direction ::= 'up' | 'down' | 'left' | 'right' //移动方向 
+action ::= 'move' | 'run' //移动方式 
+distance ::= an integer	//移动距离
 ```
 
 
-
 上述语言一共定义了五条文法规则，对应五个语言单位，这些语言单位可以分为两类，一类为终结符，例如 direction、action 和 distance，它们是语言的最小组成单位；另一类为非终结符，例如 expression 和 composite，它们都是一个完整的句子，包含一系列终结符或非终结符。
+
+针对五条文法规则，分别提供五个类来实现，其中终结符表达式 direction、action 和 distance 对应DirectionNode 类、ActionNode 类和 DistanceNode 类，非终结符表达式 expression 和 composite 对应 SentenceNode 类和 AndNode 类。我们可以通过抽象语法树来表示具体解释过程，例如机器人控制指令 “down run 10 and left move 20” 对应的抽象语法树如下图所示：
+
+<img src="../assets/design-pattern/abstract-syntax-tree-2.png" alt="abstract-syntax-tree-2" style="zoom: 80%;" />
+
+机器人控制程序实例基本结构如下图所示：
+
+<img src="../assets/design-pattern/interpreter-example.png" alt="interpreter-example" style="zoom:80%;" />
+
+- 抽象表达式角色
+
+
+
+- 非终结符表达式角色
+
+
+
+- 终结符表达式角色
+
+
+
+- 指令处理类
+
+
+
+- 测试客户端
 
 
 
 ##### 解释器模式的优缺点
 
+优点：
 
+- 易于改变和扩展文法。由于在解释器模式中使用类来表示语言的文法规则，因此可以通过继承等机制来改变或扩展文法。
+- 每一条文法规则都可以表示为一个类，因此可以方便地实现一个简单的语言。
+- 实现文法较为容易。在抽象语法树中每一个表达式节点类的实现方式都是相似的，这些类的代码编写都不会特别复杂，还可以通过一些工具自动生成节点类代码。
+- 增加新的解释表达式较为方便。如果用户需要增加新的解释表达式只需要对应增加一个新的终结符表达式或非终结符表达式类，原有表达式类代码无须修改，符合“开闭原则”。
+
+缺点：
+
+- 对于复杂文法难以维护。在解释器模式中，每一条规则至少需要定义一个类，因此如果一个语言包含太多文法规则，类的个数将会急剧增加，导致系统难以管理和维护，此时可以考虑使用语法分析程序等方式来取代解释器模式。
+- 执行效率较低。由于在解释器模式中使用了大量的循环和递归调用，因此在解释较为复杂的句子时其速度很慢，而且代码的调试过程也比较麻烦。
 
 ##### 解释器模式的适用环境
 
-
+- 可以将一个需要解释执行的语言中的句子表示为一个抽象语法树。
+- 一些重复出现的问题可以用一种简单的语言来进行表达。
+- 一个语言的文法较为简单。
+- 执行效率不是关键问题。（注：高效的解释器通常不是通过直接解释抽象语法树来实现的，而是需要将它们转换成其他形式，使用解释器模式的执行效率并不高。）
 
 
 
