--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -3599,7 +3599,7 @@ value ::= an integer //一个整数值
 
 ##### 解释器模式的实现
 
-实现场景：开发一套机器人控制程序，在该机器人控制程序中包含一些简单的英文控制指令，每一个指令对应一个表达式（expression），该表达式可以是简单表达式也可以是复合表达式，每一个简单表达式由移动方向（direction），移动方式（action）和移动距离 （distance）三部分组成，其中移动方向包括上（up）、下（down）、左（left）、右（right）；移动方式包括移动（move）和快速移动（run）；移动距离为一个正整数。两个表达式之间可以通过与（and）连接，形成复合（composite）表达式。
+实现场景：开发一套机器人控制程序，在该机器人控制程序中包含一些简单的英文控制指令，每一个指令对应一个表达式（expression），该表达式可以是简单表达式也可以是复合表达式，**每一个简单表达式由移动方向（direction），移动方式（action）和移动距离 （distance）三部分组成**，其中移动方向包括上（up）、下（down）、左（left）、右（right）；移动方式包括移动（move）和快速移动（run）；移动距离为一个正整数。**两个表达式之间可以通过与（and）连接，形成复合（composite）表达式。**
 
 用户通过对图形化操作实现输入一个机器人控制指令，机器人在收到指令后将按照指令的设置进行移动。例如输入控制指令：down run 10 and left move 20，则“向下快速移动 10 个单位再向左移动 20 个单位”。文法规则如下：
 
@@ -3614,7 +3614,7 @@ distance ::= an integer	//移动距离
 
 上述语言一共定义了五条文法规则，对应五个语言单位，这些语言单位可以分为两类，一类为终结符，例如 direction、action 和 distance，它们是语言的最小组成单位；另一类为非终结符，例如 expression 和 composite，它们都是一个完整的句子，包含一系列终结符或非终结符。
 
-针对五条文法规则，分别提供五个类来实现，其中终结符表达式 direction、action 和 distance 对应DirectionNode 类、ActionNode 类和 DistanceNode 类，非终结符表达式 expression 和 composite 对应 SentenceNode 类和 AndNode 类。我们可以通过抽象语法树来表示具体解释过程，例如机器人控制指令 “down run 10 and left move 20” 对应的抽象语法树如下图所示：
+针对这五条文法规则，分别提供五个类来实现，其中终结符表达式 direction、action 和 distance 对应DirectionNode 类、ActionNode 类和 DistanceNode 类，非终结符表达式 expression 和 composite 对应 SentenceNode 类和 AndNode 类。我们可以通过抽象语法树来表示具体解释过程，例如机器人控制指令 “down run 10 and left move 20” 对应的抽象语法树如下图所示：
 
 <img src="../assets/design-pattern/abstract-syntax-tree-2.png" alt="abstract-syntax-tree-2" style="zoom: 80%;" />
 
@@ -3624,15 +3624,132 @@ distance ::= an integer	//移动距离
 
 - 抽象表达式角色
 
-
-
-- 非终结符表达式角色
-
-
+```java
+/**
+ * 抽象结点类，充当抽象表达式角色
+ */
+public abstract class AbstractNode {
+    public abstract String interpret();
+}
+```
 
 - 终结符表达式角色
 
+```java
+/**
+ * 方向结点类，充当终结符表达式角色
+ */
+public class DirectionNode extends AbstractNode {
+    //移动方向
+    private String direction;
 
+    public DirectionNode(String direction) {
+        this.direction = direction;
+    }
+    //方向表达式的解释操作
+    @Override
+    public String interpret() {
+        if (direction.equalsIgnoreCase("up")) {
+            return " 向上 ";
+        } else if (direction.equalsIgnoreCase("down")) {
+            return " 向下 ";
+        } else if (direction.equalsIgnoreCase("left")) {
+            return " 向左 ";
+        } else if (direction.equalsIgnoreCase("right")) {
+            return " 向右 ";
+        } else {
+            return " 未知方向 ";
+        }
+    }
+}
+
+/**
+ * 动作结点类，充当终结符表达式角色
+ */
+public class ActionNode extends AbstractNode {
+    //移动方式
+    private String action;
+
+    public ActionNode(String action) {
+        this.action = action;
+    }
+    //动作表达式的解释操作
+    @Override
+    public String interpret() {
+        if (action.equalsIgnoreCase("move")) {
+            return " 移动 ";
+        } else if (action.equalsIgnoreCase("run")) {
+            return " 快速移动 ";
+        } else {
+            return " 未知动作 ";
+        }
+    }
+}
+
+/**
+ * 距离结点类，充当终结符表达式角色
+ */
+public class DistanceNode extends AbstractNode {
+
+    //移动距离
+    private String distance;
+
+    public DistanceNode(String distance) {
+        this.distance = distance;
+    }
+
+    //距离表达式的解释操作
+    @Override
+    public String interpret() {
+        return distance;
+    }
+}
+```
+
+- 非终结符表达式角色
+
+```java
+/**
+ * 简单表达式结点类，充当非终结符表达式角色
+ */
+public class SentenceNode extends AbstractNode {
+    private AbstractNode direction;
+    private AbstractNode action;
+    private AbstractNode distance;
+
+    public SentenceNode(AbstractNode direction, AbstractNode action, AbstractNode 			distance) {
+        this.direction = direction;
+        this.action = action;
+        this.distance = distance;
+    }
+
+    //简单表达式句子的解释操作
+    @Override
+    public String interpret() {
+        return direction.interpret() + action.interpret() + distance.interpret();
+    }
+}
+
+/**
+ * 复合表达式结点类，充当非终结符表达式角色
+ */
+public class AndNode extends AbstractNode{
+    //左结点
+    private AbstractNode leftNode;
+    //右结点
+    private AbstractNode rightNode;
+
+    public AndNode(AbstractNode leftNode, AbstractNode rightNode) {
+        this.leftNode = leftNode;
+        this.rightNode = rightNode;
+    }
+
+    @Override
+    public String interpret() {
+        return leftNode.interpret() + "再"+rightNode.interpret();
+    }
+}
+```
 
 - 指令处理类
 
@@ -3640,7 +3757,25 @@ distance ::= an integer	//移动距离
 
 - 测试客户端
 
+```java
+/**
+ * 解释器模式测试客户端
+ */
+public class InterpreterClient {
+    public static void main(String[] args) {
+        String instruction = "down run 10 and left move 20";
+        //创建指定处理类
+        InstructionHandler handler = new InstructionHandler();
+        handler.handle(instruction);
+        String output = handler.output();
 
+        //输入指令对应的操作
+        System.out.println(output);
+    }
+}
+```
+
+总结：
 
 ##### 解释器模式的优缺点
 
