--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -3858,7 +3858,202 @@ public class InterpreterClient {
 
 ### 迭代器模式
 
+##### 迭代器模式概述及定义
 
+概述：在软件开发中，我们经常需要使用聚合对象来存储一系列数据。聚合对象拥有两个职责：一 是**存储数据**；二是**遍历数据**。从依赖性来看，前者是聚合对象的基本职责；而后者既是可变化的，又是可分离的。因此，可以将遍历数据的行为从聚合对象中分离出来，封装在一个被称之为“迭代器”的对象中，由迭代器来提供遍历聚合对象内部数据的行为，这将简化聚合对象的设计，更符合“单一职责原则”的要求。
+
+定义：提供一种方法来访问聚合对象，而不用暴露这个对象的内部表示，其别名为游标（Cursor）。迭代器模式是一种对象行为型模式。
+
+##### 迭代器模式的结构
+
+迭代器模式包含如下 4 个角色：
+
+- **Iterator（抽象迭代器）**：它定义了访问和遍历元素的接口，声明了用于遍历数据元素的方法，例如：用于获取第一个元素的 first() 方法，用于访问下一个元素的 next() 方法，用于判断是否还有下一个元素的 hasNext() 方法，用于获取当前元素的 currentItem() 方法等，在具体迭代器中将实现这些方法。
+- **ConcreteIterator（具体迭代器）**：它实现了抽象迭代器接口，完成对聚合对象的遍历，同时在具体迭代器中通过游标来记录在聚合对象中所处的当前位置，在具体实现时，游标通常是一个表示位置的非负整数。
+- **Aggregate（抽象聚合类）**：它用于存储和管理元素对象，声明一个 createIterator() 方法用于 创建一个迭代器对象，充当抽象迭代器工厂角色。
+- **ConcreteAggregate（具体聚合类）**：它实现了在抽象聚合类中声明的 createIterator() 方法，该 方法返回一个与该具体聚合类对应的具体迭代器 ConcreteIterator 实例。
+
+<img src="../assets/design-pattern/iterator.png" alt="iterator" style="zoom:80%;" />
+
+<center>迭代器模式结构图</center>
+
+##### 迭代器模式的实现
+
+实现场景：为某商场开发一套销售管理系统，对该系统进行分析和设计时，开发人员发现需要经常对系统中的商品数据进行遍历，为了复用这些遍历代码，开发人员设计了一个抽象的数据集合类 AbstractObjectList ，而将存储商品数据的类作为其子类。
+
+<img src="../assets/design-pattern/iterator-example.png" alt="iterator-example" style="zoom:80%;" />
+
+<center>数据遍历结构图</center>
+
+- 抽象聚合类
+
+```java
+/**
+ * 抽象聚合类
+ */
+public abstract class AbstractObjectList {
+    protected List<Object> objects;
+
+    public AbstractObjectList(List<Object> objects) {
+        this.objects = objects;
+    }
+
+    public void addObject(Object obj) {
+        this.objects.add(obj);
+    }
+
+    public void removeObject(Object obj) {
+        this.objects.remove(obj);
+    }
+
+    public List<Object> getObjects() {
+        return this.objects;
+    }
+
+    //声明创建迭代器对象的抽象工厂方法
+    public abstract AbstractIterator createIterator();
+}
+```
+
+- 具体聚合类
+
+```java
+/**
+ * 具体聚合类
+ */
+public class ProductList extends AbstractObjectList {
+
+    public ProductList(List<Object> objects) {
+        super(objects);
+    }
+
+    @Override
+    public AbstractIterator createIterator() {
+        return new ProductIterator(this);
+    }
+}
+```
+
+- 抽象迭代器
+
+```java
+/**
+ * 抽象迭代器
+ */
+public interface AbstractIterator {
+    //移至下一个元素
+    void next();
+    //判断是否为最后一个元素
+    boolean isLast();
+    //移至上一个元素
+    void previous();
+    //判断是否为第一个元素
+    boolean isFirst();
+    //获取下一个元素
+    Object getNextItem();
+    //获取上一个元素
+    Object getPreviousItem();
+}
+```
+
+- 具体迭代器
+
+```java
+/**
+ * 具体迭代器
+ */
+public class ProductIterator implements AbstractIterator {
+    private List<Object> products;
+    //记录正向遍历的游标
+    private int cursor;
+    //记录逆向遍历的游标
+    private int cursor2;
+
+    public ProductIterator(ProductList productList) {
+        //获取集合对象
+        this.products = productList.getObjects();
+        //设置正向遍历游标的初始值
+        this.cursor = 0;
+        //设置逆向遍历游标的初始值
+        this.cursor2 = products.size() - 1;
+    }
+    @Override
+    public void next() {
+        if (cursor < products.size()) {
+            cursor++;
+        }
+    }
+    @Override
+    public boolean isLast() {
+        return cursor == products.size();
+    }
+    @Override
+    public void previous() {
+        if (cursor2 > -1) {
+            cursor2--;
+        }
+    }
+    @Override
+    public boolean isFirst() {
+        return cursor2 == -1;
+    }
+    @Override
+    public Object getNextItem() {
+        return products.get(cursor);
+    }
+    @Override
+    public Object getPreviousItem() {
+        return products.get(cursor2);
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 迭代器模式测试客户端
+ */
+public class IteratorClient {
+
+    public static void main(String[] args) {
+        List<Object> products = Arrays.asList("11","22","33","44","55");
+
+        ProductList productList = new ProductList(products);
+        AbstractIterator iterator = productList.createIterator();
+
+        System.out.println("正向遍历");
+        while (!iterator.isLast()) {
+            System.out.println(iterator.getNextItem());
+            iterator.next();
+        }
+        System.out.println("逆向遍历");
+        while (!iterator.isFirst()) {
+            System.out.println(iterator.getPreviousItem());
+            iterator.previous();
+        }
+    }
+}
+```
+
+##### 迭代器模式的优缺点
+
+优点：
+
+- 它支持以不同的方式遍历一个聚合对象，在同一个聚合对象上可以定义多种遍历方式。
+- 迭代器简化了聚合类。由于引入了迭代器，在原有的聚合对象中不需要再自行提供数据遍历等方法，这样可以简化聚合类的设计。
+- 由于引入了抽象层，增加新的聚合类和迭代器类都很方便，无须修改原有代码，满足“开闭原则”的要求。
+
+缺点：
+
+- 由于迭代器模式将存储数据和遍历数据的职责分离，增加新的聚合类需要对应增加新的迭代器类，类的个数成对增加，这在一定程度上增加了系统的复杂性。
+- 抽象迭代器的设计难度较大，需要充分考虑到系统将来的扩展，例如 JDK 内置迭代器 Iterator 就无法实现逆向遍历，如果需要实现逆向遍历，只能通过其子类 ListIterator 等来实现， 而 ListIterator 迭代器无法用于操作 Set 类型的聚合对象。
+
+##### 迭代器模式的适用环境
+
+- 访问一个聚合对象的内容而无须暴露它的内部表示。将聚合对象的访问与内部数据的存储分离，使得访问聚合对象时无须了解其内部实现细节。
+- 需要为一个聚合对象提供多种遍历方式。
+- 为遍历不同的聚合结构提供一个统一的接口，在该接口的实现类中为不同的聚合结构提供不同的遍历方式，而客户端可以一致性地操作该接口。
 
 ### 中介者模式
 
