--- a/docs/设计模式.md
+++ b/docs/设计模式.md
@@ -4057,7 +4057,183 @@ public class IteratorClient {
 
 ### 中介者模式
 
+##### 中介者模式的概述及定义
 
+概述：如果在一个系统中对象之间存在多对多的相互关系，我们可以将对象之间的一些交互行为从 各个对象中分离出来，并集中封装在一个中介者对象中，并由该中介者进行统一协调，这样对象之间多对多的复杂关系就转化为相对简单的一对多关系。通过引入中介者来简化对象之间的复杂交互，中介者模式是“迪米特法则”的一个典型应用。
+
+定义：用一个中介对象（中介者）来封装一系列的对象交互，中介者使各对象不需要显式地相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互。中介者模式又称为调停者模式，它是一种对象行为型模式。
+
+##### 中介者模式的结构
+
+中介者模式包含如下 4 个角色：
+
+- **Mediator（抽象中介者）**：它定义一个接口，该接口用于与各同事对象之间进行通信。
+- **ConcreteMediator（具体中介者）**：它是抽象中介者的子类，通过协调各个同事对象来实现协作行为，它维持了对各个同事对象的引用。
+- **Colleague（抽象同事类）**：它定义各个同事类公有的方法，并声明了一些抽象方法来供子类 实现，同时它维持了一个对抽象中介者类的引用，其子类可以通过该引用来与中介者通信。
+- **ConcreteColleague（具体同事类）**：它是抽象同事类的子类；每一个同事对象在需要和其他 同事对象通信时，先与中介者通信，通过中介者来间接完成与其他同事类的通信；在具体同事类中实现了在抽象同事类中声明的抽象方法。
+
+<img src="../assets/design-pattern/mediator.jpg" alt="mediator" style="zoom:80%;" />
+
+<center>中介者模式结构图</center>
+
+##### 中介者模式的实现
+
+- 抽象中介者
+
+```java
+/**
+ * 抽象中介者类
+ */
+public abstract class Mediator {
+    //注册同事对象
+    abstract void register(Colleague colleague);
+    //通知中介者，发送消息
+    abstract void relay(Colleague colleague);
+}
+```
+
+- 具体中介者
+
+```java
+/***
+ * 具体中介者类
+ */
+public class ConcreteMediator extends Mediator {
+
+    /**
+     * 被中介者协调的同事对象
+     */
+    private List<Colleague> colleagues;
+
+    public ConcreteMediator() {
+        colleagues = new ArrayList<>();
+    }
+
+    //注册同事对象到中介者对象的集合中
+    public void register(Colleague colleague) {
+        if (!colleagues.contains(colleague)) {
+            //添加同事对象
+            this.colleagues.add(colleague);
+            //同事对象维持一个中介者对象
+            colleague.setMediator(this);
+        }
+    }
+
+    //转发请求
+    public void relay(Colleague colleague) {
+        for (Colleague c : colleagues) {
+            if (!c.equals(colleague)) {
+                c.receive();
+            }
+        }
+    }
+}
+```
+
+- 抽象同事类
+
+```java
+/**
+ * 抽象同事类
+ */
+public abstract class Colleague {
+
+    //维持一个中介者对象的引用
+    protected Mediator mediator;
+
+    //接受消息
+    public abstract void receive();
+
+    //发送消息
+    public abstract void send();
+
+    public void setMediator(Mediator mediator) {
+        this.mediator = mediator;
+    }
+}
+```
+
+- 具体同事类
+
+```java
+/**
+ * 具体同事类1
+ */
+public class ConcreteColleague1 extends Colleague {
+    @Override
+    public void receive() {
+        System.out.println("colleague1 receive message.");
+    }
+
+    @Override
+    public void send() {
+        System.out.println("colleague1 send message.");
+        //请求中介者转发
+        this.mediator.relay(this);
+    }
+}
+
+/**
+ * 具体同事类2
+ */
+public class ConcreteColleague2 extends Colleague {
+    @Override
+    public void receive() {
+        System.out.println("colleague2 receive message.");
+    }
+
+    @Override
+    public void send() {
+        System.out.println("colleague2 send message.");
+        //请求中介者转发
+        this.mediator.relay(this);
+    }
+}
+```
+
+- 测试客户端
+
+```java
+/**
+ * 中介者模式测试客户端
+ */
+public class MediatorClient {
+    public static void main(String[] args) {
+        //构建中介者对象
+        Mediator mediator = new ConcreteMediator();
+
+        //构建具体同事对象
+        Colleague colleague1 = new ConcreteColleague1();
+        Colleague colleague2 = new ConcreteColleague2();
+
+        //注册同事
+        mediator.register(colleague1);
+        mediator.register(colleague2);
+
+        //发送消息
+        colleague1.send();
+        colleague2.send();
+    }
+}
+```
+
+##### 中介者模式的优缺点
+
+优点：
+
+- 中介者模式简化了对象之间的交互，它用中介者和同事的一对多交互代替了原来同事之间 的多对多交互，一对多关系更容易理解、维护和扩展，将原本难以理解的网状结构转换成相 对简单的星型结构。
+- 中介者模式可将各同事对象解耦。中介者有利于各同事之间的松耦合，我们可以独立的改 变和复用每一个同事和中介者，增加新的中介者和新的同事类都比较方便，更好地符合“开闭 原则”。
+- 可以减少子类生成，中介者将原本分布于多个对象间的行为集中在一起，改变这些行为只 需生成新的中介者子类即可，这使各个同事类可被重用，无须对同事类进行扩展。
+
+缺点：
+
+- 在具体中介者类中包含了大量同事之间的交互细节，可能会导致具体中介者类非常复杂，使 得系统难以维护。
+
+##### 中介者模式的适用环境
+
+- 系统中对象之间存在复杂的引用关系，系统结构混乱且难以理解。
+- 一个对象由于引用了其他很多对象并且直接和这些对象通信，导致难以复用该对象。
+- 想通过一个中间类来封装多个类中的行为，而又不想生成太多的子类。可以通过引入中介 者类来实现，在中介者中定义对象交互的公共行为，如果需要改变行为则可以增加新的具体 中介者类。
 
 ### 备忘录模式
 
