--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -123,6 +123,8 @@ class MyCircularQueue {
 
 #### 优先级队列
 
+优先队列可以快速得到队列中优先级最高的元素。一种高效的实现方式是使用**二叉堆**。
+
 
 
 #### 队列和 BFS
@@ -395,6 +397,7 @@ boolean DFS(Node root, Node target) {
     Set<Node> visited;
     Stack<Node> s;
     add root to s;
+    add root to visited;
     while (s is not empty) {
         Node cur = pop element from s;
         return true if cur is target;
@@ -412,6 +415,329 @@ boolean DFS(Node root, Node target) {
 
 
 ### 链表
+
+链表是一种线性数据结构，它通过引用字段将所有分离的元素链接在一起。有两种常用的链表：**单链表**和**双链表**。
+
+#### 单链表
+
+单链表中的每个结点不仅包含**值**，还包含链接到下一个结点的**引用字段**。通过这种方式，单链表将所有结点按顺序组织起来。在大多数情况下，我们将使用**第一个结点**来表示整个列表。
+
+结点结构：
+
+```java
+class Node {
+    int val;
+    Node next;
+    Node(int x) { val = x; }
+}
+```
+
+与数组不同，我们无法在常量时间内访问单链表中的随机元素。 如果我们想要获得第 i 个元素，我们必须从头结点逐个遍历。 我们按索引来访问元素平均要花费 `O(N) `时间，其中 N 是链表的长度。
+
+#### 双链表
+
+它的每个结点中都有**两个指针**，分别指向**直接后继**和**直接前驱**。所以，从双向链表中的任意一个结点开始，都可以很方便地访问它的前驱结点和后继结点。
+
+结点结构：
+
+```java
+class Node {
+    int val;
+    Node next;
+    Node prev;
+    Node(int x) { val = x; }
+}
+```
+
+[LeetCode 707. 设计链表](https://leetcode-cn.com/problems/design-linked-list/) 这道题的可以使用单链表或双链表实现。
+
+单链表实现：
+
+```java
+/**
+ * 单链表实现 使用哨兵结点充当伪头
+ * 时间复杂度：
+ * addAtHead： O(1)
+ * addAtIndex，get，deleteAtIndex: O(k)，其中 k 指的是元素的索引。
+ * addAtTail：O(N)，其中 N 指的是链表的元素个数。
+ * 空间复杂度：所有的操作都是 O(1)。
+ */
+class MyLinkedList {
+
+    private class ListNode {
+        int val;
+        ListNode next;
+        ListNode(int x) { val = x; }
+    }
+
+    private int size;
+    // 哨兵结点做伪头
+    private ListNode head;
+
+    public MyLinkedList() {
+        size = 0;
+        head = new ListNode(0);
+    }
+
+    public int get(int index) {
+        if (index < 0 || index >= size) return -1;
+
+        ListNode curr = head;
+        for(int i = 0; i < index + 1; ++i)
+            curr = curr.next;
+
+        return curr.val;
+    }
+
+    public void addAtHead(int val) {
+        addAtIndex(0, val);
+    }
+
+    public void addAtTail(int val) {
+        addAtIndex(size, val);
+    }
+
+    public void addAtIndex(int index, int val) {
+        if (index > size) return;
+        if (index < 0) index = 0;
+
+        ++size;
+        ListNode pred = head;
+        for(int i = 0; i < index; ++i)
+            pred = pred.next;
+        
+        ListNode toAdd = new ListNode(val);
+        toAdd.next = pred.next;
+        pred.next = toAdd;
+    }
+
+    public void deleteAtIndex(int index) {
+        if (index < 0 || index >= size) return;
+        size--;
+        ListNode pred = head;
+        for(int i = 0; i < index; ++i)
+            pred = pred.next;
+        pred.next = pred.next.next;
+    }
+}
+```
+
+双链表实现：
+
+```java
+/**
+ * 双链表实现 使用哨兵结点充当伪头和伪尾
+ * 时间复杂度：
+ * addAtHead，addAtTail： O(1)
+ * get，addAtIndex，delete：O(min(k,N−k))，其中 k 指的是元素的索引。
+ * 空间复杂度：所有的操作都是 O(1)。
+ *
+ */
+class MyLinkedList {
+
+    private class ListNode {
+        int val;
+        ListNode next;
+        ListNode prev;
+        ListNode(int x) { val = x; }
+    }
+
+    private int size;
+    // 使用哨兵结点充当伪头和伪尾
+    private ListNode head, tail;
+
+    public MyLinkedList() {
+        size = 0;
+        head = new ListNode(0);
+        tail = new ListNode(0);
+        head.next = tail;
+        tail.prev = head;
+    }
+
+    public int get(int index) {
+        if (index < 0 || index >= size) return -1;
+
+        ListNode curr = head;
+        if (index + 1 < size - index)
+            for(int i = 0; i < index + 1; ++i)
+                curr = curr.next;
+        else {
+            curr = tail;
+            for(int i = 0; i < size - index; ++i)
+                curr = curr.prev;
+        }
+        return curr.val;
+    }
+
+    public void addAtHead(int val) {
+        ListNode pred = head, succ = head.next;
+        ++size;
+        ListNode toAdd = new ListNode(val);
+        //需要将四个引用重新连上
+        toAdd.prev = pred;
+        toAdd.next = succ;
+        pred.next = toAdd;
+        succ.prev = toAdd;
+    }
+
+    public void addAtTail(int val) {
+        ListNode succ = tail, pred = tail.prev;
+        ++size;
+        ListNode toAdd = new ListNode(val);
+        //需要将四个引用重新连上
+        toAdd.prev = pred;
+        toAdd.next = succ;
+        pred.next = toAdd;
+        succ.prev = toAdd;
+    }
+
+    public void addAtIndex(int index, int val) {
+        if (index > size) return;
+        if (index < 0) index = 0;
+
+        ListNode pred, succ;
+        if (index < size - index) {
+            pred = head;
+            for(int i = 0; i < index; ++i)
+                pred = pred.next;
+            succ = pred.next;
+        } else {
+            succ = tail;
+            for (int i = 0; i < size - index; ++i)
+                succ = succ.prev;
+            pred = succ.prev;
+        }
+
+        ++size;
+        ListNode toAdd = new ListNode(val);
+        toAdd.prev = pred;
+        toAdd.next = succ;
+        pred.next = toAdd;
+        succ.prev = toAdd;
+    }
+
+    public void deleteAtIndex(int index) {
+        if (index < 0 || index >= size) return;
+        ListNode pred, succ;
+        if (index < size - index) {
+            pred = head;
+            for(int i = 0; i < index; ++i)
+                pred = pred.next;
+            succ = pred.next.next;
+        } else {
+            succ = tail;
+            for (int i = 0; i < size - index - 1; ++i)
+                succ = succ.prev;
+            pred = succ.prev.prev;
+        }
+        --size;
+        pred.next = succ;
+        succ.prev = pred;
+    }
+}
+```
+
+#### 链表中的双指针
+
+双指针可以分为**快慢指针**和**左右指针**两种。
+
+##### 快慢指针
+
+快慢指针顾名思义就是有两个指针，一个跑的快一点，一个跑的慢一点。
+
+快慢指针模板：
+
+```java
+ListNode slow = head;
+ListNode fast = head;
+while (slow != null && fast != null && fast.next != null) {
+    slow = slow.next;           // move slow pointer one step each time
+    fast = fast.next.next;      // move fast pointer two steps each time
+    if (slow == fast) {         // change this condition to fit specific problem
+        return true;
+    }
+}
+return false;   // change return value to fit specific problem
+```
+
+注意：
+
+- 在调用 next 字段之前，始终检查节点是否为空，例如，在我们运行 `fast = fast.next.next` 之前，需要检查 `fast` 和 `fast.next` 不为空。
+
+- 仔细定义循环的结束条件，运行几个示例，以确保你的结束条件不会导致无限循环。
+
+快慢指针应用：
+
+- 判断链表中是否有环
+
+  一个安全的选择是每次移动慢指针一步，而移动快指针两步。每一次迭代，快速指针将额外移动一步。如果环的长度为 *M*，经过 *M* 次迭代后，快指针肯定会多绕环一周，并赶上慢指针。
+
+  ```java
+  boolean hasCycle(ListNode head) {
+      ListNode fast = head, slow = head;
+      while(fast != null && fast.next != null) {
+          fast = fast.next.next;
+          slow = slow.next;
+          if (fast == slow)
+              return true;
+      }
+      return false;
+  }
+  ```
+
+- 已知链表中含有环，返回这个环的起始位置
+
+  ```java
+  ListNode detectCycle(ListNode head) {
+      ListNode fast = head, slow = head;
+      while (fast != null && fast.next != null) {
+          fast = fast.next.next;
+          slow = slow.next;
+          if (fast == slow)//此时已经在环内的某个结点
+              break;
+      }
+      slow = head;
+      //以相同的速度走到再次相遇时 就是环的起点
+      while (slow != fast) {
+          fast = fast.next;
+          slow = slow.next;
+      }
+      return slow;
+  }
+  ```
+
+- 寻找链表的中点
+
+  ```java
+  ListNode middle(ListNode head) {
+      ListNode slow = head, fast = head;
+      while (fast != null && fast.next != null) {
+          fast = fast.next.next;
+          slow = slow.next;
+      }
+      // slow 就在中间位置
+      return slow;
+  }
+  ```
+
+  当链表的长度是奇数时，slow 恰巧停在中点位置；如果长度是偶数，slow 最终的位置是中间偏右位置。
+
+- 寻找链表的倒数第 k 个结点
+
+  ```java
+  ListNode get(ListNode head, int k) {
+      ListNode slow = head, fast = head;
+      while (k-- > 0) 
+          fast = fast.next;
+      while (fast != null) {
+          slow = slow.next;
+          fast = fast.next;
+      }
+      return slow;
+  }
+  ```
+
+  让快指针先走 k 步，然后快慢指针开始同速前进。这样当快指针走到链表末尾 null 时，慢指针所在的位置就是倒数第 k 个链表节点。
 
 
 
