--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -418,6 +418,8 @@ boolean DFS(Node root, Node target) {
 
 链表是一种线性数据结构，它通过引用字段将所有分离的元素链接在一起。有两种常用的链表：**单链表**和**双链表**。
 
+使用链表的技巧：伪头伪尾指针、快慢指针。
+
 #### 单链表
 
 单链表中的每个结点不仅包含**值**，还包含链接到下一个结点的**引用字段**。通过这种方式，单链表将所有结点按顺序组织起来。在大多数情况下，我们将使用**第一个结点**来表示整个列表。
