--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -36,11 +36,173 @@
 
 ### 数组 
 
+数组用**索引**的数字来标识每项数据在数组中的位置，索引是从 `0` 算起的，我们可以根据索引快速访问数组中的元素。**数组中的元素在内存中是连续存储的**，且每个元素占用相同大小的内存。
 
+- 根据索引直接读取元素的时间复杂度为 O(1)。
+- 在数组中查找某个元素的时间复杂度为 O(n)，因为需要逐个比对。
+- 插入和删除元素的时间复杂度为 O(n)，因为需要将其他元素移动位置。
+
+#### 排序数组的二分查找
+
+题目描述：给定一个排序数组和一个目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。
+
+```java
+int searchInsert(int[] nums, int target) {
+    int begin = 0;
+    int end = nums.length - 1;
+    //当起始小于等于终止
+    while (begin <= end) {
+        int mid = (begin + end) / 2;
+        if (nums[mid] == target) {
+            return mid;
+        } else if (nums[mid] > target) {
+            end = mid - 1;
+        } else {
+            begin = mid + 1;
+        }
+    }
+    return begin;
+}
+```
+
+#### 二维数组
+
+二维数组的每个元素是一维数组，所以二维数组的本质上仍然是一个一维数组，内部的一维数组仍然从索引 `0` 开始，我们可以将它看作一个**矩阵**，并处理矩阵的相关问题。
+
+实际应用中，往往使用二维数据处理矩阵类相关问题，包括**矩阵旋转**、**对角线遍历**以及对**子矩阵的操作**等。
+
+- [旋转矩阵](https://leetcode-cn.com/problems/rotate-matrix-lcci/)：给你一幅由 `N × N` 矩阵表示的图像，将图像旋转 90 度。
+
+  ```java
+     /**
+       * 先对角线翻转再左右翻转
+       * 时间复杂度：O(N^2)，其中 N 是 matrix 的边长。
+       * 空间复杂度：O(1)
+       */
+      public static void rotate2(int[][] matrix) {
+          int len = matrix.length;
+          //对角线翻转
+          for (int i = 0; i < len; i++) {
+              for (int j = 0; j < i; j++) {
+                  int temp = matrix[i][j];
+                  matrix[i][j] = matrix[j][i];
+                  matrix[j][i] = temp;
+              }
+          }
+          //左右翻转的轮次 ( >> 1 是除以二的意思)
+          int mid = len >> 1;
+          //左右翻转
+          for (int i = 0; i < mid; i++) {
+              for (int j = 0; j < len; j++) {
+                  int temp = matrix[j][i];
+                  matrix[j][i] = matrix[j][len - 1 - i];
+                  matrix[j][len - 1 - i] = temp;
+              }
+          }
+      }
+  ```
+
+- [零矩阵](https://leetcode-cn.com/problems/zero-matrix-lcci/)：若M × N矩阵中某个元素为0，则将其所在的行与列清零。
+
+  ```java
+  public static void setZeroes(int[][] matrix) {
+          boolean[] line = new boolean[matrix.length];
+          boolean[] column = new boolean[matrix[0].length];
+  
+          // 找出要清零的行列
+          for (int i = 0; i < matrix.length; i++) {
+              for (int j = 0; j < matrix[0].length; j++) {
+                  if (matrix[i][j] == 0) {
+                      line[i] = true;
+                      column[j] = true;
+                  }
+              }
+          }
+          // 开始对行清零
+          for (int i = 0; i < matrix.length; i++) {
+              if (line[i]) {
+                  for (int j = 0; j < matrix[0].length; j++) {
+                      matrix[i][j] = 0;
+                  }
+              }
+          }
+          // 开始对列清零
+          for (int i = 0; i < matrix[0].length; i++) {
+              if (column[i]) {
+                  for (int j = 0; j < matrix.length; j++) {
+                      matrix[j][i] = 0;
+                  }
+              }
+          }
+      }
+  ```
+
+- [对角线遍历](https://leetcode-cn.com/problems/diagonal-traverse/)：给定一个含有 M x N 个元素的矩阵（M 行，N 列），请以对角线遍历的顺序返回这个矩阵中的所有元素。（遍历顺序为：左下到右上，右上到左下，以此类推）
+
+  ```java
+  /**
+   * 根据规律变换坐标遍历二维数组
+   * 时间复杂度：O(N⋅M)，每个元素只处理一次。
+   * 空间复杂度：O(1)，不使用额外空间
+   */
+  public static int[] findDiagonalOrder(int[][] matrix) {
+      //避免多余的循环
+      if (matrix == null || matrix.length == 0) {
+          return new int[0];
+      }
+      int m = matrix.length;
+      int n = matrix[0].length;
+  
+      int size = m * n;
+      int[] res = new int[size];
+      //遍历的坐标
+      int x = 0, y = 0;
+      //true代表向右上角遍历，false代表向左下角遍历
+      boolean flag = true;
+      for (int i = 0; i < size; i++) {
+          res[i] = matrix[x][y];
+          //向右上角遍历
+          if (flag) {
+              x--;
+              y++;
+              //到了右边界
+              if (y > n - 1) {
+                  y = n - 1;
+                  x += 2;
+                  flag = false;
+              }
+              //到了上边界
+              if (x < 0) {
+                  x = 0;
+                  flag = false;
+              }
+          } else {
+              //向左下角遍历
+              x++;
+              y--;
+              //到了下边界
+              if (x > m - 1) {
+                  x = m - 1;
+                  y += 2;
+                  flag = true;
+              }
+              //到了左边界
+              if (y < 0) {
+                  y = 0;
+                  flag = true;
+              }
+          }
+      }
+      return res;
+  }
+  ```
 
 ### 字符串
 
+字符串是由零个或多个字符组成的有限序列。一般记为 s = a1a2...an。它是编程语言中表示文本的数据类型。
 
+- 字符串的基本操作对象通常是**字符串整体**或者**其子串**；
+- 字符串操作一般有**比较**和**连接**；
 
 ### 队列
 
@@ -641,7 +803,7 @@ class MyLinkedList {
 
 #### 链表中的双指针
 
-双指针可以分为**快慢指针**和**左右指针**两种。
+双指针可以分为**快慢指针**（一般是链表）和**左右指针**（一般是数组）两种。
 
 ##### 快慢指针
 
