--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -65,6 +65,69 @@ int searchInsert(int[] nums, int target) {
 }
 ```
 
+#### 双指针技巧
+
+双指针包括**快慢指针**和**左右指针**。你想要从两端向中间迭代数组，可以使用左右指针。如果你希望同向但不同速度遍历数组可以使用快慢指针。
+- [反转字符串](https://leetcode-cn.com/problems/reverse-string/)：将输入的字符串反转过来。
+
+  ```java
+  /**
+  * 使用左右指针
+  */
+  public void reverseString(char[] s) {
+      for (int i = 0, j = s.length - 1; i < j; i++, j--) {
+          char c = s[i];
+          s[i] = s[j];
+          s[j] = c;
+      }
+  }
+  ```
+
+- [两数之和 II](https://leetcode-cn.com/problems/two-sum-ii-input-array-is-sorted/)：给定一个升序排序的有序数组，找到两个数使得它们相加之和等于目标数。
+
+  ```java
+  /**
+  * 使用左右指针
+  * 时间复杂度 o(n)
+  */
+  public static int[] twoSum(int[] numbers, int target) {
+      int left = 0;
+      int right = numbers.length - 1;
+      while (left < right) {
+          int sum = numbers[left] + numbers[right];
+          if (sum == target) {
+              return new int[]{left + 1, right + 1};
+          } else if (sum > target) {
+              right--;
+          } else {
+              left++;
+          }
+      }
+      return new int[]{-1, -1};
+  }
+  ```
+
+- [移除元素](https://leetcode-cn.com/problems/remove-element)：给你一个数组 *nums* 和一个值 *val*，你需要原地移除所有数值等于 *val* 的元素，并返回移除后数组的新长度。
+
+  ```java
+  /**
+  * 使用快慢指针
+  */
+  public int removeElement(int[] nums, int val) {
+      int len = nums.length;
+      int slow = 0, fast = 0;
+      while (fast < len) {
+          if (nums[fast] != val) {
+          	nums[slow++] = nums[fast];
+          }
+          fast++;
+      }
+      return slow;
+  }
+  ```
+
+  
+
 #### 二维数组
 
 二维数组的每个元素是一维数组，所以二维数组的本质上仍然是一个一维数组，内部的一维数组仍然从索引 `0` 开始，我们可以将它看作一个**矩阵**，并处理矩阵的相关问题。
@@ -203,6 +266,67 @@ int searchInsert(int[] nums, int target) {
 
 - 字符串的基本操作对象通常是**字符串整体**或者**其子串**；
 - 字符串操作一般有**比较**和**连接**；
+
+#### KMP 算法
+
+KMP 算法是一种改进的**字符串匹配**算法，其关键是利用匹配失败后的信息，尽量减少**模式串**与**主串**的匹配次数以达到**快速匹配**的目的。常用于在一个文本串 S 内查找一个模式串 P 的出现位置，KMP 算法的时间复杂度 O(m+n)，空间复杂度 O(n)。
+
+```java
+/**
+ * KMP 匹配主方法
+ * @param str     文本串
+ * @param pattern 模式串
+ * @return 模式串第一次出现的索引，如果没有匹配到返回 -1
+ */
+public static int match(String str, String pattern) {
+    // 构造 next 表
+    int[] next = buildNext(pattern);
+
+    int m = str.length();
+    int n = pattern.length();
+    // i 和 j 分别是文本串和模式串的指针
+    int i = 0, j = 0;
+    while (j < n && i < m) {
+        // 若匹配，或 pattern 已移除最左侧
+        if (0 > j || str.charAt(i) == pattern.charAt(j)) {
+            // 则转到下一字符
+            i++;
+            j++;
+        } else {
+            // 模式串回退 （文本串不用回退）
+            j = next[j];
+        }
+    }
+    //没能成功匹配到字符串
+    if (j != n) return -1;
+    return i - j;
+}
+
+/**
+ * 构造模式串 p 的 next 表
+ */
+private static int[] buildNext(String p) {
+    int m = p.length();
+    int[] next = new int[m];
+    // 模式串指针
+    int t = next[0] = -1;
+    // “主”串指针
+    int j = 0;
+    while (j < m - 1) {
+        if (0 > t || p.charAt(j) == p.charAt(t)) {
+            j++;
+            t++;
+            next[j] = (p.charAt(j) != p.charAt(t) ? t : next[t]);
+        } else {
+            // 失配
+            t = next[t];
+        }
+    }
+    return next;
+}
+```
+
+
 
 ### 队列
 
