--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -67,7 +67,7 @@ int searchInsert(int[] nums, int target) {
 
 #### 双指针技巧
 
-双指针包括**快慢指针**和**左右指针**。你想要从两端向中间迭代数组，可以使用左右指针。如果你希望同向但不同速度遍历数组可以使用快慢指针。
+双指针包括**快慢指针**和**左右指针**。你想要从两端向中间迭代数组，可以使用左右指针。如果你希望同向但不同速度遍历数组或者处理**滑动窗口**问题可以使用快慢指针。
 - [反转字符串](https://leetcode-cn.com/problems/reverse-string/)：将输入的字符串反转过来。
 
   ```java
@@ -126,7 +126,36 @@ int searchInsert(int[] nums, int target) {
   }
   ```
 
+- [长度最小的子数组](https://leetcode-cn.com/problems/minimum-size-subarray-sum/)：给定一个含有 **n** 个正整数的数组和一个正整数 **s ，**找出该数组中满足其和 **≥ s** 的长度最小的子数组，并返回其长度**。**如果不存在符合条件的子数组，返回 0。
+
+  ```java
+  /**
+   * 使用快慢指针（也叫滑动窗口）
+   * 时间复杂度：O(n)，其中 n 是数组的长度。指针 start 和 end 最多各移动 n 次。
+   * 空间复杂度：O(1)。
+   */
+  public static int minSubArrayLen3(int s, int[] nums) {
+      //定义两个指针
+      int start = 0, end = 0;
+      int sum = 0;
+      //最小数组长度
+      int res = Integer.MAX_VALUE;
+      while (end < nums.length) {
+          sum += nums[end];
+          //移除元素
+          while (sum >= s) {
+              res = Math.min(res, end - start + 1);
+              sum -= nums[start++];
+          }
+          end++;
+      }
+      return res == Integer.MAX_VALUE ? 0 : res;
+  }
+  ```
+
   
+
+
 
 #### 二维数组
 
