--- a/docs/数据结构.md
+++ b/docs/数据结构.md
@@ -36,7 +36,7 @@
 
 ### 数组 
 
-数组用**索引**的数字来标识每项数据在数组中的位置，索引是从 `0` 算起的，我们可以根据索引快速访问数组中的元素。**数组中的元素在内存中是连续存储的**，且每个元素占用相同大小的内存。
+数组用**索引**的数字来标识每项数据在数组中的位置，索引是从 `0` 算起的，我们可以根据索引快速访问数组中的元素。**数组中的元素在内存中是连续存储的**，且每个元素占用相同大小的内存。解决数组类的问题的方法：**双指针（左右指针、快慢指针）、前缀和、二分查找（排序数组）**等。
 
 - 根据索引直接读取元素的时间复杂度为 O(1)。
 - 在数组中查找某个元素的时间复杂度为 O(n)，因为需要逐个比对。
@@ -152,10 +152,6 @@ int searchInsert(int[] nums, int target) {
       return res == Integer.MAX_VALUE ? 0 : res;
   }
   ```
-
-  
-
-
 
 #### 二维数组
 
@@ -1056,27 +1052,87 @@ return false;   // change return value to fit specific problem
 
   让快指针先走 k 步，然后快慢指针开始同速前进。这样当快指针走到链表末尾 null 时，慢指针所在的位置就是倒数第 k 个链表节点。
 
+### 哈希表
+
+哈希表是一种使用**哈希函数**组织数据，以支持**快速插入和搜索**的数据结构。（缺点：需要较多的空间，属于一种用空间换时间的做法）。
+
+有两种不同类型的哈希表：哈希集合和哈希映射。
+
+- 哈希集合是**集合**数据结构的实现之一，用于存储**非重复值**。（Java 的 HashSet）
+- 哈希映射是**映射**数据结构的实现之一，用于存储`(key, value)`键值对。（Java 的 HashMap）
+
+#### 设计哈希表
+
+哈希表的原理：使用哈希函数**将键映射到存储桶**。
+
+- 当我们插入一个新的键时，哈希函数将决定该键应该分配到哪个桶中，并将该键存储在相应的桶中；
+- 当我们想要搜索一个键时，哈希表将使用相同的哈希函数来查找对应的桶，并只在特定的桶中进行搜索。
+
+ 设计哈希表的关键：
+
+- **哈希函数**，它是哈希表中最重要的组件，用于将键映射到特定的桶。散列函数将取决于**键值的范围和桶的数量**。
+
+  哈希函数的设计是一个开放的问题。其思想是尽可能将键均匀分配到桶中，理想情况下，完美的哈希函数将是键和桶之间的一对一映射。然而，在大多数情况下，哈希函数并不完美，它需要在桶的数量和桶的容量之间进行权衡。
+
+- **解决冲突**，当两个以前的键使用哈希函数计算出的值相等时，就产生了冲突，于是，我们必须解决哈希值相同时如何找到准确的目标值。
+
+  **拉链法**：把具有相同哈希值的键放在同一个单链表中，称为同义词链表。（Java 的 HashMap 就是使用这种方法）。
+
+
+
+
+
+
+
+#### 哈希映射
+
+
+
+#### 设计键
+
+
+
 
 
 ### 树
 
+
+
 #### 二叉树
+
+
 
 #### 完全二叉树
 
+
+
 #### Huffman 树
+
+
 
 #### 二叉搜索树
 
+
+
 #### AVL 树
+
+
 
 #### 红黑树
 
+
+
 #### N 叉树
+
+
 
 #### B + 树
 
+
+
 #### Trie 树
+
+
 
 
 
@@ -1086,11 +1142,13 @@ return false;   // change return value to fit specific problem
 
 ### 堆
 
+
+
 #### 最小堆
+
+
 
 #### 最大堆
 
 
-
-### 散列表
 
